--- a/issue2/article07/2017-02-19.mdx
+++ b/issue2/article07/2017-02-19.mdx
@@ -317,12 +317,12 @@ Ali is the first letter, and the final point, and the word of Koran,
 I am Nasimi – meddah of Heydar, the slave of Heydar.
 
 (Əlizadə, 1995:17. Translation by the author)
-Note: Heydər, one of the epithet names of Imam Ali,
-an  anrabic word for “lion”; it is used in a figurative sense in the meaning of “brave”.
 
 ```
 
 </div>
+
+Note: Heydər, one of the epithet names of Imam Ali, an anrabic word for “lion”; it is used in a figurative sense in the meaning of “brave”.
 
 The ancient genre of panegyric called mədh, or mədhiyyə has had a long history in Oriental poetry; it has been traditionally dedicated to the rulers – shah, khan, sultan, or khaqan. The poem quoted above is a sample of so-called Əli mədhi, the genre of panegyrics in honor of Imam Ali; its author, an outstanding Azerbaijani classical poet Imadaddin Nasimi (1369-1417), claims himself to be meddah of Imam Ali, i.e. his panegyrist. The genre of Əli mədhi, (which has remained in use in Shia religious practice and dervish rites up to now), was popular with the poets of the Shah Ismayil Khatayi` mejlis (poetic circle). Khayati himself was the author of such poems. Below are two lines from one of his panegyrics to Imam Ali:
 
@@ -389,8 +389,9 @@ Note: **_Əsğər_** is the name of Imam Hussein`s youngest, six-month-old son m
 
 <div className='poetry'>
 
+
 ```
-**Ashyg Aly:**
+Ashyg Aly:
 
 İmam Həsən gözəllərin gözüdü,
 İmam Hüseyin şəfaətçi özüdü.
@@ -398,9 +399,9 @@ Note: **_Əsğər_** is the name of Imam Hussein`s youngest, six-month-old son m
 Imam Hassan is the heart of the Excellence
 Imam Husein is the life-giving one.
 
-__________________________________
+_________________________________
 
-**Ashyg Musa:**
+Ashyg Musa:
 
 İsmimdən Aşıq Musa,
 Şahi-Mərdan quluyam.
@@ -411,11 +412,12 @@ I am a Shah-Mardan`s slave.
 __________________________________
 
 (Əlizadə 1995, 18. Translation by the author)
-Note: Shahi-Mardan is atraditional addressing to Imam Ali.
 
 ```
 
 </div>
+
+Note: Shahi-Mardan is atraditional addressing to Imam Ali.
 
 ---
 
@@ -437,10 +439,23 @@ In the Soviet times religious and mystical motifs practically disappeared from t
 6. Kərimli, Azad Ozan. 2000. “Göyçə aşıq məktəbi.” ("Göycha Ashyg School"). _Musiqi dünyası, № 1(2): 66-72, part 1_, Baku.
 7. Məhəmmədcəlil, Məhəmməd, and Fariz Xəlilli. 2003._ Mövlana İsmayıl Siracəddin Şirvani_. (_Movlana Ismayil Sirajaddin Shirvani_). Baku: Adiloqlu.
 8. Qasımlı, Məhərrəm. 2002. _Şah İsmayıl Xətayinin poeziyası_. (_Poetry of Shah Ismayil Khatayi_). Baku: Elm
-9. **\_**. 2007. _Ozan-Aşıq sənəti_. (_Art of Ozan and Ashiq_). Baku: Ugur.
+9. ____. 2007. _Ozan-Aşıq sənəti_. (_Art of Ozan and Ashiq_). Baku: Ugur.
 10. Smirnov, Konstantin. 1999. [1934.] _Materialı po istorii i etnoqrafii Naxiçevanskoqo kraia_. (_Materials on history and ethnography of Nakhchivan district_.) [Tiflis], Baku: Ozan.
 11. Sadıq oğlu Çingiz. 1988. "Azərbaycan təsəvvüfü tarixində 'Səfəviyyə' və onun Xətai yaradıcılığında yeri." ("Safaviyya order in the history of Tasavvuf in Azerbaijan and its role in the works of Khatayi.") In Şah İsmayıl Xətai. Məqalələr toplusu. (_Shah Ismayil Khatayi. Collected articles_), 58-70. Baku: Elm.
 12. Xətayi, Şah İsmayıl. 1988. “Keçmə namərd körpüsündən”. _Şerlər və poemalar_. (“Don`t cross the bridge of the treacherous one. Verses and poems.) Baku: Yazichi.
+
+</div>
+
+#### Discography
+
+<div className='additional_resources'>
+
+- Azerbaijan State Radio company archive. Recording of the 1960s. _Heydari_ (also _Mammadhuseini_, or _Kürdü_). Performed by ashyg Akber Jafarov (1933-1990) and Abbasali Ismayilov on the balaban, lyrics by ashyg-poet Mammadhusein. 
+- Baghirova, Sanubar. 2010. CD 9, track 5. _Bash divani_, (also _Shah Khatayi divanisi_). Performed by ashyg Kamandar Efendiyev (1932-2000), lyrics by haqq ashiqi Dirili Gurbani. In Audio collection “Classical heritage of Azerbaijani ashygs.” Baku: Ministry of Culture and Tourism of Azerbaijan Republic.
+- Baghirova, Sanubar. 2010. CD 1, track 18. _Mansuru_. Performed by ashyg Avdy Avdyiev (1910-1987), lyrics by ashyg Avdy Avdyiev. In Audio collection “Classical heritage of Azerbaijani ashygs.” Baku: Ministry of culture and tourism of Azerbaijan Republic. 
+- Baghirova, Sanubar. 2010. CD 12, track 14. _Ibrahim peshrosu_ (Shirvan regional version of the song Ibrahimi). Performed by ashyg Mahmud Niftaliyev (1946-2002), lyrics by haqq ashiqi Abbas Tufarqanly. In Audio collection “Classical heritage of Azerbaijani ashygs.” Baku: Ministry of culture and tourism of Azerbaijan Republic.
+- Efendiyev, Kamandar, perf. ashyg. 1982. _Ibrahimi_. Lyrics from the medieval ashyg love dastan “Ashiq Garib.” Azerbaijan State TV archive.
+- Garayev, Ramin, perf. ashyg. 2015. _Urfani_ (also _Ruhani_). Lyrics by haqq ashiqi Dirili Gurbani. Recorded by the Azerbaijan State Radio company. Used by courtesy of the performer.  
 
 </div>
 
