--- a/issue7/article01/2022-02-25.mdx
+++ b/issue7/article01/2022-02-25.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'ANATOMY OF ETHOS, PATHOS IN MUSIC OF AFRICA ​AND ITS PATHOGENIC ESSENCE'
+title: '#1 Anatomy Of Ethos, Pathos In Music Of Africa ​and Its Pathogenic Essence'
 slug: anatomy-of-ethos-pathos-in-music-of-africa
 description: 'The work predicts that bathing people or the environment with excessively high volume of sounds will in no time engender physical and emotional disturbances, neural deafness and even total deafness. Consequently, it suggests that the government should make adequate legislation on sound pollution to arrest this malaise.'
 authors: [caluede, adekogbe]
 tags: [anatomy, ethos, pathos, pathogens, public health, music therapy]
 ---
 
-# ANATOMY OF ETHOS, PATHOS IN MUSIC OF AFRICA ​AND ITS PATHOGENIC ESSENCE
+# #1 Anatomy Of Ethos, Pathos In Music Of Africa ​and Its Pathogenic Essence
 
 {/* truncate */}
 
@@ -22,14 +22,14 @@ Accepted: Feb 02, 2022
 
 ```
 
-# ANATOMY OF ETHOS, PATHOS IN MUSIC OF AFRICA ​AND ITS PATHOGENIC ESSENCE
+# #1 Anatomy Of Ethos, Pathos In Music Of Africa ​and Its Pathogenic Essence
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -151,7 +151,7 @@ That mothers throughout the world and as far back as in time as we can imagine, 
 
 Early in time, a word of caution was given by Benson (2010, 18), when he observed that not all music has the potential to be healing music. There is rare epilepsy called ‘musicogenic epilepsy’, which is induced by listening to music played by an orchestra, even the sound of the piano or ringing bells can cause an attack on human health if played at an excessive volume that can cause ripples in the human ear. Complementing the effects of high volume of sound on the human ear, Benade (1990, 532) opines that sounds are perceived through hearing, hearing is achieved through the ear and the ear has a threshold of what volume of sound it can accommodate. Any sound beyond what the threshold of the human ear can take is considered as noise. Any sound beyond what the threshold of the human ear can take is considered as noise.
 
-In another subject relating to the perception of musical sound, Smith (1997) observes that
+In another subject relating to the perception of musical sound, Smith (1997) observes that:
 
 > sound perception in terms of combination of tones, when two tones that are close together in frequency are sounded at the same time, beats generally are heard at a rate that is equal to their frequency difference. In other words, when the frequency difference exceeds 15 Hz, the beat sensation disappears and musical tone roughness appears and this is when musical sound turns to noise. (Smith 1997, 228)
 
@@ -186,7 +186,7 @@ Relating to the concept of loudness of musical instruments acoustics, Smith (199
 
 ​Sound has often been used as a channel of oppression, intimidation, challenge and even to create a call for undue attention. This cultural factor is practised anywhere around us in the theatres, concert halls, film houses, churches and even in the hospitals where there should be minimal generation of noise in order not to disturb patients on admission. Aldred (1978, 63) opines that it is interesting to think for a while about the notion of a sound being not loud enough or being too loud, because it appears that these two phrases do not refer to the same concept. Connecting this to this study, a sound may not be loud enough if it is not well heard and may be too loud when it distorts the air. The volume of a television set may not be loud enough if the volume is not audible enough for the viewers to hear and may be too loud if the volume is louder and constituting a noise nuisance to the viewers.
 
-​In view of Aldred’s idea, it tends to be reasoned that a sound is not effectively perceptible and difficult to be heard. Along these lines this thought of sound as seen by Vorländer (2008, 120) is similar to intelligibility, rather than acoustical factor. This is a relative notion which holds that sound intelligibility depends on the acoustical environment and background noise,. There are, at least, two different notions regarding loudness (as given by Sandell 1995, 221): one is that a relative notion related to intelligibility, and two, a more absolute one related to an unpleasant or even painful feeling. It is worthy to say that a sound is too loud in the sense of intelligibility. For example, when a television volume becomes an impediment to audibility to a particular conversation in a room, the notion of loudness turns to a multiform, and therefore cannot be mapped to a singular sound volume situation. It could therefore be submitted that the notion of loud musical sound in church auditoria is an emotional factor as worshippers are emotionally attached to church auditorium musical instruments acoustics. Submitting on this, McAdam and Bregman (1979, 40) state that loudness of musical instruments acoustics is not only about objective properties of the external world, but also about our cultural world or more precisely about the effect of sounds on our organism. In addition to this, Sreedhar (2000) puts it that
+​In view of Aldred’s idea, it tends to be reasoned that a sound is not effectively perceptible and difficult to be heard. Along these lines this thought of sound as seen by Vorländer (2008, 120) is similar to intelligibility, rather than acoustical factor. This is a relative notion which holds that sound intelligibility depends on the acoustical environment and background noise,. There are, at least, two different notions regarding loudness (as given by Sandell 1995, 221): one is that a relative notion related to intelligibility, and two, a more absolute one related to an unpleasant or even painful feeling. It is worthy to say that a sound is too loud in the sense of intelligibility. For example, when a television volume becomes an impediment to audibility to a particular conversation in a room, the notion of loudness turns to a multiform, and therefore cannot be mapped to a singular sound volume situation. It could therefore be submitted that the notion of loud musical sound in church auditoria is an emotional factor as worshippers are emotionally attached to church auditorium musical instruments acoustics. Submitting on this, McAdam and Bregman (1979, 40) state that loudness of musical instruments acoustics is not only about objective properties of the external world, but also about our cultural world or more precisely about the effect of sounds on our organism. In addition to this, Sreedhar (2000) puts it that:
 
 > many listeners have subconsciously felt the effects of over-compressed songs in the form of auditory fatigue, where it actually becomes tiring to continue listening to the music. ‘You want music that breathes. If the music has stopped breathing, and it’s a continuous wall of sound, that will be fatiguing’ says Katz. ‘If you listen to it loudly as well, it will potentially damage your ears before the older music did because the older music had room to breathe.’ (Sreedhar 2000, 118)
 
@@ -196,7 +196,7 @@ Relating to the concept of loudness of musical instruments acoustics, Smith (199
 
 Pitch in music is considered as the highness or lowness of a musical tone, this is in agreement with its amplitude, length, and colour. Pitch cannot be determined without the frequency and a precise scientific unit of decibel measurement. Gade (1985, 112) observes that pitch is equally affected by individual personal opinion that takes into consideration the comparative placement of highness or lowness of musical instruments acoustics within church auditoria especially during a worship service. Olson (1971, 13) observes that pitch is determined by the frequency of sound. However, this could be used in the balancing of musical instruments' sound production in a situation where there is a war of sound or a conflicting emanation of musical instruments’ sounds pitch from a live source. The application of pitch analysis in church auditoria will reduce the effects of loud musical sound productions on the congregation and also make clarity of musical sound possible. The traits of conflicting musical sound production were experienced in virtually all the purposively selected sound producing auditoria case-studying for this research.
 
-Our observations on the nature of musical instruments’ sound productions in the selected church auditoria signal serious health implications on the congregation especially, young babies whose parents are ignorant of this great health hazards of exposure to amplified music and loud musical sounds. Ameye (2018) observes that
+Our observations on the nature of musical instruments’ sound productions in the selected church auditoria signal serious health implications on the congregation especially, young babies whose parents are ignorant of this great health hazards of exposure to amplified music and loud musical sounds. Ameye (2018) observes that:
 
 > long hours of loud sound exposure can result in partial deafness of the choir, the instrumentalists, the ministers and the entire congregation. More often, people in this category undergo unpleasant hearing sensations triggered by noise pollution through heavy wattage of musical instruments’ sound. ( Ameye 2018, 15)
 
@@ -242,7 +242,7 @@ Every musical instrument has its own peculiar acoustic nature which gives the fu
 
 ### Elements of Musical Instruments’ Sounds in Church Auditoria
 
-Richard (1988, 315) opines that musical instruments’ acoustic in church auditoria is a reflection and expression of the individual’s mind which are subjective to how individual perceives musical sound. In his assertion, he states that
+Richard (1988, 315) opines that musical instruments’ acoustic in church auditoria is a reflection and expression of the individual’s mind which are subjective to how individual perceives musical sound. In his assertion, he states that:
 
 > (...) music has an estimable ability to deliver and act for the mind, more intuitively than any other sensual mean, the very standing, rising and falling, the very steps and inflections every way, the turns and varieties of all passions whereunto the mind is subject; yea so to imitate them, that, whether it resembles unto us the same state wherein our minds already are (...). (Richard 1988, 315)
 
@@ -250,12 +250,12 @@ Richard (1988, 315) opines that musical instruments’ acoustic in church audito
 
 ## ​The Sensation of Loudness
 
-​The human ear has a limited decibel of sound reception in terms of loudness and volume level. Barron (2005) writes on the sensation of hearing that
+​The human ear has a limited decibel of sound reception in terms of loudness and volume level. Barron (2005) writes on the sensation of hearing that:
 
 > When pressure fluctuations reach the human ear, this occurs in a certain frequency region, and does not fall below a minimum sound level. The lowest frequency for which a vibration process is still perceived as a tone is approximately 16 Hz. This corresponds to a Cₒ which is included in the 320 register of some large organs. For yet lower frequencies, the ear can already follow the temporal process of the vibrations, so that a unique tonal impression can no longer be formed. Barron (2005, 577)
 > ​
 
-​​From the above submission, Barron’s position is clearly understood that it is likely that hearers of musical sound can lose tonal registration if certain musical sound is higher in volume than the human threshold of hearing. In this context, Sessler, Schultz and Watters (1991) also submit that
+​​From the above submission, Barron’s position is clearly understood that it is likely that hearers of musical sound can lose tonal registration if certain musical sound is higher in volume than the human threshold of hearing. In this context, Sessler, Schultz and Watters (1991) also submit that:
 
 > (...) this so-called threshold of hearing depends in large measure on frequency. The ear responds with most sensitivity to tones in the frequency range between 2,000 and 5,000 Hz. In this range, the minimum required sound level is the lowest. For higher frequencies, but even more so for lower frequencies, the sensitivity of the human ear is reduced, so that in these regions significantly, higher sound pressure levels are required for a musical tone to become audible (...). (Sessler, Schultz and Watters 1991, 885)
 
@@ -273,17 +273,15 @@ Resulting from participant observation in all the selected auditoria, it was fou
 
 <div className='figureBox'>
 
-<table>
+<table className='centerText'>
 	<caption>
-		Table 1. Qualitative Results of the Measured Musical Sound in each
+		**Table 1.** Qualitative Results of the Measured Musical Sound in each
 		Auditorium
 	</caption>
 	<thead>
 		<tr>
 			<th>Auditorium</th>
-			<th></th>
 			<th>Average Decibel</th>
-			<th></th>
 			<th>Average Decibel</th>
 			<th>Average Decibel</th>
 			<th>Average Decibel per Auditorium</th>
@@ -293,9 +291,7 @@ Resulting from participant observation in all the selected auditoria, it was fou
 	<tbody>
 		<tr>
 			<td>Christ Apostolic Church Headquarter, Ile-Ife</td>
-			<td></td>
 			<td>Day One-104 dB</td>
-			<td></td>
 			<td>Day Two-105 dB</td>
 			<td>Day Three-102 dB</td>
 			<td>104 dB</td>
@@ -303,9 +299,7 @@ Resulting from participant observation in all the selected auditoria, it was fou
 		</tr>
 		<tr>
 			<td>Saint Paul Cathedral, Yemetu, Ibadan</td>
-			<td></td>
 			<td>Day One-100 dB</td>
-			<td></td>
 			<td>Day Two-105 dB</td>
 			<td>Day Three-103 dB</td>
 			<td>103 dB</td>
@@ -313,9 +307,7 @@ Resulting from participant observation in all the selected auditoria, it was fou
 		</tr>
 		<tr>
 			<td>Ogunbanjo Event Hall, Obafemi Awolowo University, Ile-Ife.</td>
-			<td></td>
 			<td>Day One 112 dB</td>
-			<td></td>
 			<td>Day Two-110 dB</td>
 			<td>Day Three-109 dB</td>
 			<td>110.33 dB</td>
@@ -323,21 +315,17 @@ Resulting from participant observation in all the selected auditoria, it was fou
 		</tr>
 		<tr>
 			<td>MTN Talent Hunt Show (May, April 10, 2021) Freedom Park, Lagos</td>
-			<td></td>
 			<td>117.18 dB</td>
-			<td></td>
 			<td>One Measurement</td>
 			<td>One Measurement</td>
 			<td>117.18 dB</td>
 			<td>Very high</td>
 		</tr>
 		<tr>
-			<td>Average Musical Instruments Acoustics Volume</td>
-			<td></td>
+			<td rowSpan={2}>Average Musical Instruments Acoustics Volume</td>
 			<td>
 				<strong>Day One</strong>
 			</td>
-			<td></td>
 			<td>
 				<strong>Day Two</strong>
 			</td>
@@ -348,24 +336,19 @@ Resulting from participant observation in all the selected auditoria, it was fou
 				<strong>Average dB</strong>
 			</td>
 			<td></td>
-		</tr>
+			</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td>108.25 dB</td>
-			<td></td>
+			<td style={{textAlign:'center'}}>108.25 dB</td>
 			<td>107 dB</td>
 			<td>105 dB</td>
 			<td>109 dB</td>
 			<td>Very high</td>
 		</tr>
 		<tr>
-			<td>Average of Noise Level in All the Selected Church Auditoria</td>
+			<td rowSpan={2}>Average of Noise Level in All the Selected Church Auditoria</td>
 			<td>
 				<strong>Minimum</strong> <em>L</em>Aeq,T
 			</td>
-			<td></td>
-			<td></td>
 			<td>
 				<strong>Maximum</strong> <em>L</em>Aeq,T
 			</td>
@@ -378,22 +361,18 @@ Resulting from participant observation in all the selected auditoria, it was fou
 			<td></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td>
+			<td style={{textAlign:'center'}}>
 				<strong>105 dB</strong>
 			</td>
-			<td></td>
 			<td>
 				<strong>109 dB</strong>
 			</td>
 			<td>
 				<strong>107 dB</strong>
 			</td>
-			<td>
+			<td colSpan={2} className='text-center'>
 				<strong>Threshold of Pain</strong>
 			</td>
-			<td></td>
 		</tr>
 	</tbody>
 </table>
@@ -426,7 +405,7 @@ There is a need to join thoughts with the views of Roseman (2012):
 7. Benade, A.H. 1976. _Fundamentals of Musical Acoustics 1._ London and New York: Oxford University Press.
 8. Benade, A.H. 1990. _Fundamentals of musical acoustics 2_. London: Oxford University Press.
 9. Benson, Stella. 2010. _The Healing Musician: A Guide to Playing Healing Music at The Bedside._ ISBN 0967545307
-10. Bregman, A. 1979. “Hearing Musical Streams.” _Computer Music Journal Vol. 3 (4): 26-43+60_
+10. Bregman, A. 1979. “Hearing Musical Streams.” _Computer Music Journal Vol. 3(4): 26-43+60_
 11. Brown, S.D 1992. _Time-domain simulation of sound production in the brass instrument._ Oxford: Oxford University Press
 12. Bruce, S.W. 1997. “Pitch discrimination of diotic and dichotic tone complexes: harmonic Resolvability or harmonic number.” _Journal of Acoustics Society of America (3): 179-189._
 13. Cardozo, M. 2004. _Harmonic sounds: complementary medicine for the critically ill._ British Journal of Nursing 13 (22): 13-214.
@@ -441,7 +420,7 @@ There is a need to join thoughts with the views of Roseman (2012):
 22. Georg von Békésy 1938. _Audiology and the cochlea._ London: Mayo Clin. Publisher.
 23. Hast, W. D. 1989. The Hearing of symphony orchestra musicians. Scand.: Audio Publisher.
 24. Hanser, S.B. 2016. _Integrative Health through Music Therapy: Accompanying the Journey from Illness to Wellness._ London: Macmillan Publishers.
-25. Hogan, B. 2003. “Soul Music in the Twilight Years.” _Topics in Geriatric Rehabilitation 19 (4): 275–81._
+25. Hogan, B. 2003. “Soul Music in the Twilight Years.” _Topics in Geriatric Rehabilitation 19(4): 275–81._
 26. Hutchins, E. 1980. _Culture and inference: A trobriand case study._ Harvard University Press.
 27. Ikibe, S. 2010. “Religious transformation: Critical issues in the secularization of Gospel music in Nigeria.“ A paper presented at The Crossroads in African Studies Conference (Brazilafrica). The Department of African studies and Anthropology centre of West African Studies, University of Birmingham, United Kingdom.
 28. Koen, B.D. 2009. _Beyond the Roof of the World Music, Prayer, and Healing in the Pamir Mountains._ New York: Oxford University Press.
@@ -451,7 +430,7 @@ There is a need to join thoughts with the views of Roseman (2012):
 32. Levitin, D. J. 2010. _The world in Six Songs._ New York: Aurum Press Limited
 33. McAdams, S. and A. Bregman. 1979. “Hearing musical streams. Computer Music.” _Journal of Vibrations and Sound (13): 26- 60._
 34. McClellan, R. 2000. _The Healing Forces of Music._ New York: Excel Publishers.
-35. Nagata, Kazunao. 2001. “The World of Electronic Sound 2 . (In Concert 1996 & 1997).“ _Nagata Sound Magazine._
+35. Nagata, Kazunao. 2001. “The World of Electronic Sound 2. (In Concert 1996 & 1997).“ _Nagata Sound Magazine._
 36. O'Connor, M.E. 2020. Music as Medicine: The Healing Power of Music.
 37. Olson, H. F. 1971. _Modern sound reproduction._ Van Nostrand Reinhold 2. Aufl. New York.
 38. Parncutt, R. 2016. “Prenatal Development and the Phylogeny and Ontogeny of Music.” In _The Oxford Handbook of Music Psychology_, edited by S. Hallam, I. Cross, and M. Thaut, M. New York: Oxford University Press.
@@ -471,7 +450,7 @@ There is a need to join thoughts with the views of Roseman (2012):
 52. Stevens, C. 2012. _Music Medicine._ Colorado.
 53. Stopper, M.C. 2021. “Medical Definition of Patho.” _Medterms Medical Dictionary a-z list._
 54. Thèberge, P. 1999. _Any sound you can imagine: Making Music /Consuming technology. Book 2._ Middletown Connecticut: Wesleyan University Press.
-55. Ticker, C. S. 2017. "Music and the Mind: Music's Healing Powers." _Musical Offerings Vol. 8 (1): 1._ DOI: 10.15385/jmo.2017.8.1.1. [link]
+55. Ticker, C. S. 2017. "Music and the Mind: Music's Healing Powers." _Musical Offerings Vol. 8(1): 1._ DOI: 10.15385/jmo.2017.8.1.1. [link]
 56. Vorländer, M. 2008. _Auralization: Fundamentals of Acoustics, Modelling, Simulation, Algorithms and Acoustic Virtual Reality._ Springer Publishers. ISBN 978-3-540-48830-9
 57. Zwinglio, C. R. 2008. ” Music stage design.” _Journal of Sound Vibrations (69): 108-122._
 
