--- a/issue7/article02/2022-02-24.mdx
+++ b/issue7/article02/2022-02-24.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'The Impact Of The Use Of Code-Mixing In Nigerian Gospel Music'
+title: '#2 The Impact Of The Use Of Code-Mixing In Nigerian Gospel Music'
 slug: code-mixing-in-nigerian-gospel-music
 description: ''
 authors: [ealemede]
@@ -7,7 +7,7 @@ tags: [Gospel music, Christian Music, code-mixing, Yoruba, Igbo and Hausa]
 tbl-cap-location: top
 ---
 
-# The Impact Of The Use Of Code-Mixing In Nigerian Gospel Music
+# #2 The Impact Of The Use Of Code-Mixing In Nigerian Gospel Music
 
 {/* truncate */}
 
@@ -22,14 +22,14 @@ Accepted: Feb 08, 2022
 
 ```
 
-# The Impact Of The Use Of Code-Mixing In Nigerian Gospel Music
+# #2 The Impact Of The Use Of Code-Mixing In Nigerian Gospel Music
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+			<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -91,7 +91,7 @@ Gospel music as a genre is associated with Christianity, and hence, a form of re
 
 The highest mission of gospel music is to serve as a link between God and man. Throughout the Old Testament, music was an integral part of the worship of God. In the New Testament text, several hymn fragments are present, an indication that shows that the early church relied on hymns and songs to help express the message of Christ's Gospel. There were hymns and choruses/praises in the churches, regardless of denomination, before 1900. It was generally known as Christian music. Over the years it has developed alongside other musical styles like blues, reggae e.t.c.
 
-​Daramola (2008) in his introduction on Christian Music as a Discipline: A Religious Appraisal of Christian Music in Nigeria Today quoted Echerua’s assertion (1977) that
+​Daramola (2008) in his introduction on Christian Music as a Discipline: A Religious Appraisal of Christian Music in Nigeria Today quoted Echerua’s assertion (1977) that:
 
 > Christianity as a religion has music making as one of its practices from inception. During worship or services, music plays important roles. Any Christian worship or service without music is just like a rainbow without colours. Take away singing from the church and the pews will be vacant and innumerable music halls and entertainment houses will sprout up. (Daramola 2008)
 > ​
@@ -136,7 +136,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 <div className='figureBox'>
 
 <table>
-	<caption>Table 1. Socio-demographic characteristics</caption>
+	<caption> **Table 1.** Socio-demographic characteristics</caption>
 	<thead>
 		<tr>
 			<th>Parameters</th>
@@ -147,7 +147,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 	</thead>
 	<tbody>
 		<tr>
-			<td>What do you do in gospel music? (tick as appropriate)</td>
+			<td>What do you do in gospel music? <br /> (tick as appropriate)</td>
 			<td>Gospel Musician</td>
 			<td>37</td>
 			<td>37.0</td>
@@ -217,7 +217,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 
 <table>
 	<caption>
-		Table 2. ​Perception of Respondents on the use of Multi-Lingual and
+		Table 2. ​Perception of Respondents on the use of <br /> Multi-Lingual and
 		Mono-Lingual Music
 	</caption>
 	<thead>
@@ -230,7 +230,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 	</thead>
 	<tbody>
 		<tr>
-			<td>Is your mother tongue one of the Nigerian languages</td>
+			<td>Is your mother tongue one of <br /> the Nigerian languages</td>
 			<td>No</td>
 			<td>2</td>
 			<td>2.0</td>
@@ -254,7 +254,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 			</td>
 		</tr>
 		<tr>
-			<td>Are Multi-lingual songs preferable than mono-lingual?</td>
+			<td>Are Multi-lingual songs preferable <br /> than mono-lingual?</td>
 			<td>No</td>
 			<td>31</td>
 			<td>31.0</td>
@@ -279,7 +279,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think Multi-lingual songs feature during Church worship than
+				Do you think Multi-lingual songs <br /> feature during Church worship <br /> than
 				monolingual songs?
 			</td>
 			<td>No</td>
@@ -306,7 +306,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think multi-lingual songs are more popular than mono-lingual
+				Do you think multi-lingual songs <br /> are more popular than <br /> mono-lingual
 				songs?
 			</td>
 			<td>No</td>
@@ -333,7 +333,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think Multi-lingual songs bring about unity among different
+				Do you think Multi-lingual songs <br /> bring about unity among <br /> different
 				ethnic groups
 			</td>
 			<td>No</td>
@@ -360,7 +360,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think multi-lingual artistes are more popular than mono-lingual
+				Do you think multi-lingual artistes <br /> are more popular than <br /> mono-lingual
 				artistes?
 			</td>
 			<td>No</td>
@@ -387,7 +387,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think Multi-lingual artistes have larger reach than mono-lingual
+				Do you think Multi-lingual artistes <br /> have larger reach than <br /> mono-lingual
 				artist?
 			</td>
 			<td>No</td>
@@ -414,7 +414,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you still relate with multi-lingual songs even when some of the
+				Do you still relate with <br /> multi-lingual songs even when <br /> some of the
 				lyrics are not in your dialect?
 			</td>
 			<td>No</td>
@@ -441,7 +441,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think multi-lingual artistes are more successful financially than
+				Do you think multi-lingual artistes <br /> are more successful financially than <br />
 				mono-lingual artistes?
 			</td>
 			<td>No</td>
@@ -480,13 +480,13 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td></td>
-			<td>They reach out to every one irrespective of their language</td>
+			<td>They reach out to every one <br /> irrespective of their language</td>
 			<td>14</td>
 			<td>14.0</td>
 		</tr>
 		<tr>
 			<td></td>
-			<td>Found more meaning than just singing with only one language</td>
+			<td>Found more meaning than just singing <br /> with only one language</td>
 			<td>1</td>
 			<td>1.0</td>
 		</tr>
@@ -516,7 +516,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think Multi-lingual songs are more inspiring than mono-lingual
+				Do you think Multi-lingual songs <br /> are more inspiring than <br /> mono-lingual
 				songs?
 			</td>
 			<td>No</td>
@@ -543,7 +543,7 @@ Code-mixing uses several languages in one clause or the mixing of different ling
 		</tr>
 		<tr>
 			<td>
-				Do you think Multi-lingual songs should be produced more than
+				Do you think Multi-lingual songs <br /> should be produced more than <br />
 				mono-lingual songs?
 			</td>
 			<td>No</td>
@@ -588,7 +588,7 @@ Sixty percent of the respondents agreed that multi-lingual artistes are more pop
 <div className='figureBox'>
 	<table>
 		<caption>
-			Table 3. ​Respondents rating of the frequency of use of the major Nigerian
+			**Table 3**. ​Respondents rating of the frequency of use of the major Nigerian
 			languages and the lingua-franca in multi-lingual gospel songs
 		</caption>
 		<thead>
@@ -602,9 +602,9 @@ Sixty percent of the respondents agreed that multi-lingual artistes are more pop
 		<tbody>
 			<tr>
 				<td>
-					In your candid opinion which of the Nigerian languages including
-					English which is the lingual franca are mostly combined are employed
-					in multi-lingual gospel songs? (Please tick freely)
+					In your candid opinion which of the <br /> Nigerian languages including
+					English which is <br /> the lingual franca are mostly combined <br /> are employed
+					in multi-lingual gospel songs? <br /> (Please tick freely)
 				</td>
 				<td>Yoruba and English</td>
 				<td>26</td>
@@ -676,7 +676,7 @@ The data in _Table 3_ reveal that twenty-six percentage (26%) of the respondents
 <div className='figureBox'>
 
 <table>
-	<caption> Table 4. List of some gospel artists in Nigeria</caption>
+	<caption> **Table 4.** List of some gospel artists in Nigeria</caption>
 	<thead>
 		<tr>
 			<th>Artiste</th>
