--- a/issue7/article03/2022-02-23.mdx
+++ b/issue7/article03/2022-02-23.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria'
+title: '#3 An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria'
 slug: the-role-of-music-in-coping-with-bereavement-in-esan
 description: 'The people have a stupendous collection of songs and proverbs themed around death is indicative of the fact that death itself is a well thought of phenomenon in their cosmology. To elicit data for this study, a mixture of research methods was used and these included library search for relevant literature, interviews and active spectatorship and observation.'
 authors: [caluede]
 tags: [Bereavement, Therapy, Death, indigenous, Thanatology, Esan]
 ---
 
-# An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria
+# #3 An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria
 
 {/* truncate */}
 
@@ -22,14 +22,14 @@ Accepted: Feb 05, 2022
 
 ```
 
-# An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria
+# #3 An Excursion Into The Role Of Music In Coping Withbereavement In Esan, Edo State Of Nigeria
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -37,7 +37,7 @@ export function Name({ author, affil, email }) {
 <div className='authors'>
 	<Name
 		author='Charales O. Aluede'
-		affil='Department of Theatre and Media Arts, Ambrose Alli University, Ekpoma, Edo State, Nigeria'
+		affil='Department of Theatre and Media Arts, Ambrose Alli University. Ekpoma, Edo State, Nigeria'
 		email='coaluede@gmail.com'
 	/>
 </div>
@@ -128,7 +128,7 @@ Esanland is grouped under five local government areas for administrative conveni
 
 ## Kinds of Death in Esan Worldview
 
-​Here, we would like to start by examining briefly kinds of death from Esan lens. Among this people, death is not just taken in as its name implies. The variables responsible for death are often given a due consideration too. This consideration has a link with the expected funeral observances. Aluede and Aluede (2012) have interrogated this subject matter a great deal and we would like to cite them here elaborately. To them, death could be shameful or glorious. To die of poverty, hunger, neglect or to be discovered dead as a result of foul odour perceived from a decomposing body obviously are no news of good tidings. Similarly, to die through self-help (suicide) or going against community mores as in dying in the bush and dying of mental disorder in the community are also strands of shameful deaths. While in Esan vocabulary Uumhin-oya implies shameful death, Uumhin-eghonghon means joyous or glorious death. Dying peacefully in a sleep, dying after a very brief illness and not dying of protracted and malignant ailment that could dry up available resources at an old age is regarded as joyous or glorious death. Aluede and Aluede (2011) are not alone in this thinking. It is in this connection that Izibili (2017) opines that
+​Here, we would like to start by examining briefly kinds of death from Esan lens. Among this people, death is not just taken in as its name implies. The variables responsible for death are often given a due consideration too. This consideration has a link with the expected funeral observances. Aluede and Aluede (2012) have interrogated this subject matter a great deal and we would like to cite them here elaborately. To them, death could be shameful or glorious. To die of poverty, hunger, neglect or to be discovered dead as a result of foul odour perceived from a decomposing body obviously are no news of good tidings. Similarly, to die through self-help (suicide) or going against community mores as in dying in the bush and dying of mental disorder in the community are also strands of shameful deaths. While in Esan vocabulary Uumhin-oya implies shameful death, Uumhin-eghonghon means joyous or glorious death. Dying peacefully in a sleep, dying after a very brief illness and not dying of protracted and malignant ailment that could dry up available resources at an old age is regarded as joyous or glorious death. Aluede and Aluede (2011) are not alone in this thinking. It is in this connection that Izibili (2017) opines that:
 
 > Death to the traditional Esan people, is of two kinds. The first they refer to as “Good death” Good death is that which takes place when the person has attained a reasonable age and the children are grown up to give him a befitting burial. “Bad death” is such that happens when an under aged dies right in the very eyes of the parents… Another kind of “bad death” is suicide (Uhoa). (Izibili 2017, 83-84)
 
