--- a/issue7/article04/2022-02-22.mdx
+++ b/issue7/article04/2022-02-22.mdx
@@ -1,35 +1,34 @@
 ---
-title: 'An Empirical Research: Indian Classical Dance Education And its Impact on The Students Spiritual Intelligence'
+title: '#4 An Empirical Research: Indian Classical Dance Education And its Impact on The Students Spiritual Intelligence'
 slug: indian-classical-dance-education-and-its-impact
 description: 'The aim of this study is to empirically investigate the impact that the period of learning of Indian Classical art form Bharatanatyam creates on the Spiritual intelligence of the students.'
 authors: [kanaka, smohan]
 tags: [Transcendental awareness, spiritual intelligence, Bharatanatyam, gender.]
 ---
 
-# An Empirical Research: Indian Classical Dance Education And its Impact on The Students Spiritual Intelligence
+# #4 An Empirical Research: Indian Classical Dance Education And its Impact on The Students Spiritual Intelligence
 
 {/* truncate */}
 
 ```
-UDC: 784.68:393.7(669.1)
-     78:316.7
+UDC: 793.3(540)
 
-COBISS.SR-ID 59576585 CIP - 5
+COBISS.SR-ID 59625225 CIP - 8
 _________________
-Received: Jan 13, 2022
-Reviewed: Jan 28, 2022
-Accepted: Feb 05, 2022
+Received: Oct 28, 2021
+Reviewed: Nov 03, 2021
+Accepted: Nov 24, 2021
 
 ```
 
-# An Empirical Research: Indian Classical Dance Education And its Impact on The Students Spiritual Intelligence
+# #4 An Empirical Research: Indian Classical Dance Education And its Impact on The Students Spiritual Intelligence
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -187,11 +186,13 @@ The descriptive statistics focused here will be prominently gender where the var
 
 <div className='figureBox'>
 <table>
-<caption>Table 1. Gender - frequency analysys</caption>
+	<caption> 
+	{' '}
+	**Table 1.** Gender - frequency analysys
+	</caption>
 	<thead>
 		<tr>
-			<th></th>
-			<th></th>
+			<th colSpan={2}></th>
 			<th>Frequency</th>
 			<th>Percent</th>
 			<th>Valid Percent</th>
@@ -200,32 +201,22 @@ The descriptive statistics focused here will be prominently gender where the var
 	</thead>
 	<tbody>
 		<tr>
-			<td>
-				<strong>Valid</strong>
-			</td>
-			<td>
-				<strong>Male</strong>
-			</td>
+			<th rowSpan={3}>Valid</th>
+			<th>Male</th>
 			<td>19</td>
 			<td>10.6</td>
 			<td>10.6</td>
 			<td>10.6</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td>
-				<strong>Female</strong>
-			</td>
+			<th>Female</th>
 			<td>161</td>
 			<td>89.4</td>
 			<td>89.4</td>
 			<td>100.0</td>
 		</tr>
 		<tr>
-			<td></td>
-			<td>
-				<strong>Total</strong>
-			</td>
+			<th>Total</th>
 			<td>
 				<strong>180</strong>
 			</td>
@@ -261,7 +252,10 @@ The quantitative analysis in the developed research utilizes two major technique
 <div className='figureBox'>
 
 <table>
-	<caption>Table 2. Reliability analysis with Cronbach-Alpha test</caption>
+	<caption> 
+    {' '}
+    **Table 2.** Reliability analysis with Cronbach-Alpha test
+    </caption>
 	<thead>
 		<tr>
 			<th>S.No</th>
@@ -306,209 +300,747 @@ The quantitative analysis in the developed research utilizes two major technique
 
 The association between two variables (independent and dependent) is tested through regression where the formulated hypotheses will be tested in analysis.
 
-### 1.3.1 Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Critical existential thinking (CET):
+### 1.3.1. Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Critical existential thinking (CET)
 
-The first hypothesis analyses the relationship of YPB and CET (refer table 3a) where the values of R (.560), R^2 (.314) and adjusted R^2 (.310) are obtained, where the 31.4% of dependent variable is described by the independent variable.
+The first hypothesis analyses the relationship of YPB and CET (refer _Table 3a_) where the values of R (.560), R^2 (.314) and adjusted R^2 (.310) are obtained, where the 31.4% of dependent variable is described by the independent variable.
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>**_Table 3a._** Model Summary</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table3a.png').default}
-			alt='Table 3a. Model Summary'
-		/>
-	</figure>
-	<span>a. Predictors: (Constant), YPB</span>
+	<table>
+	<caption>
+	{' '}
+	**Table 3a**. Model Summary
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2}>Model</th>
+      <th rowSpan={2}>R</th>
+      <th rowSpan={2}>R2</th>
+      <th rowSpan={2}>Adjusted R2</th>
+      <th rowSpan={2}>Std. Error of the Estimate</th>
+      <th colSpan={5}>Change Statistics</th>
+    </tr>
+		<tr>
+			<th>R2 Change</th>
+			<th>F Change</th>
+			<th>df1</th>
+			<th>df2</th>
+			<th>Sig. F Change</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>.560a</td>
+      <td>.314</td>
+      <td>.310</td>
+      <td>4.32958</td>
+      <td>.314</td>
+      <td>81.383</td>
+      <td>1</td>
+      <td>178</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={10}>a. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>**_Table 3b._** ANOVAa</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table3b.png').default}
-			alt='Table 3b. ANOVAa'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SICET</span>
-	<span>b. Predictors: (Constant), YPB</span>
+
+
+<table>
+	<caption>
+	{' '}
+	**Table 3b**. ANOVA<sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th colSpan={2}>Model</th>
+      <th>Sum of Squares</th>
+      <th>df</th>
+      <th>Mean Square</th>
+      <th>F</th>
+      <th>Sig.</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowSpan={3}>1</td>
+      <th>Regression</th>
+      <td>1525.543</td>
+      <td>1</td>
+      <td>1525.543</td>
+      <td>81.383</td>
+      <td>.000b</td>
+    </tr>
+    <tr>
+      <th>Residual</th>
+      <td>3336.657</td>
+      <td>178</td>
+      <td>18.745</td>
+			<td />
+			<td />
+    </tr>
+    <tr>
+      <th>Total</th>
+      <td>4862.200</td>
+      <td>179</td>
+      <td />
+      <td />
+      <td />
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SICET <br /> b. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
 </div>
 
 From ANOVA (**_Table 3b_**), the p value is observed as lesser than 0.05 (p < 0.0005) thus regression model substantially predicts outcomes reliably and ANOVA is significant.
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 3c._** Coefficients<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table3c.png').default}
-			alt='Table 3c. Coefficients'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SICET</span>
+
+<table>
+	<caption>
+		{' '}
+		**Table 3c**. Coefficients <sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2} colSpan={2}>Model</th>
+      <th colSpan={2}>Un-standardized <br /> Coefficients</th>
+      <th>Standardized <br /> Coefficients</th>
+      <th rowSpan={2}>t</th>
+      <th rowSpan={2}>Sig.</th>
+    </tr>
+		<tr>
+			<th>B</th>
+			<th>Std. ErrorB</th>
+			<th>Beta</th>
+		</tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th rowSpan={2}>1</th>
+      <th>(Constant)</th>
+      <td>3.607</td>
+      <td>2.419</td>
+			<td></td>
+      <td>1.491</td>
+      <td>.138</td>
+    </tr>
+    <tr>
+      <th>YPB</th>
+      <td>.627</td>
+      <td>.069</td>
+      <td>.560</td>
+      <td>9.021</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SICET</td>
+    </tr>
+  </tbody>
+</table>
+
+
 </div>
 
-_Table 3c_ estimates the relationship between YPB and the CET through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Critical existential thinking’. Regression equation for estimating spiritual intelligence factor ‘existence’ through practicing Bharatanatyam is analysed through:
+_Table 3c_ estimates the relationship between YPB and the CET through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Critical existential thinking’. Regression equation for estimating spiritual intelligence factor ‘existence’ through practicing Bharatanatyam is analysed through: **YPB = 3.607 + (0.627 \* CET)**
 
-**YPB = 3.607 + (0.627 \* CET)**
+### 1.3.2. Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Personal meaning production (PM)
 
-### 1.3.2 Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Personal meaning production (PM):
-
-The second hypothesis analyses the relationship of YPB and PMP (refer table 4a) where the values of R (.515), R^2 (.265) and adjusted R^2 (.261) are obtained, where the 26.5% of dependent variable is described by the independent variable.
+The second hypothesis analyses the relationship of YPB and PMP (refer _Table 4a_) where the values of R (.515), R^2 (.265) and adjusted R^2 (.261) are obtained, where the 26.5% of dependent variable is described by the independent variable.
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>**_Table 4a._** Model Summary</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table4a.png').default}
-			alt='Table 4a. Model Summary'
-		/>
-	</figure>
-	<span>a. Predictors: (Constant), YPB</span>
+
+<table>
+	<caption>
+	{' '}
+	**Table 4a**. Model Summary
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2}>Model</th>
+      <th rowSpan={2}>R</th>
+      <th rowSpan={2}>R<sup>2</sup></th>
+      <th rowSpan={2}>Adjusted R<sup>2</sup></th>
+      <th rowSpan={2}>Std. Error of <br /> the Estimate</th>
+      <th colSpan={5}>Change Statistics</th>
+    </tr>
+		<tr>
+			<th>R2 Change</th>
+			<th>F Change</th>
+			<th>df1</th>
+			<th>df2</th>
+			<th>Sig. F Change</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>.515<sup>a</sup></td>
+      <td>.265</td>
+      <td>.261</td>
+      <td>2.43244</td>
+      <td>.265</td>
+      <td>64.193</td>
+      <td>1</td>
+      <td>178</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={10}>a. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
+
 </div>
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 4b._** Coefficients<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table4b.png').default}
-			alt='Table 4b. Coefficients'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SIPMP</span>
-	<span>b. Predictors: (Constant), YPB</span>
+
+<table>
+	<caption>
+	{' '}
+	**Table 4b**. ANOVA<sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th colSpan={2}>Model</th>
+      <th>Sum of Squares</th>
+      <th>df</th>
+      <th>Mean Square</th>
+      <th>F</th>
+      <th>Sig.</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowSpan={3}>1</td>
+      <th>Regression</th>
+      <td>379.813</td>
+      <td>1</td>
+      <td>379.813</td>
+      <td>64.193</td>
+      <td>.000<sup>b</sup></td>
+    </tr>
+    <tr>
+      <th>Residual</th>
+      <td>1053.181</td>
+      <td>178</td>
+      <td>5.917</td>
+			<td />
+			<td />
+    </tr>
+    <tr>
+      <th>Total</th>
+      <td>1432.994</td>
+      <td>179</td>
+      <td />
+      <td />
+      <td />
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SIPMP <br /> b. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 From ANOVA (_Table 4b_), the p value is observed as lesser than 0.05 (p < 0.0005) thus regression model substantially predicts outcomes reliably and ANOVA is significant.
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 4c._** Coefficients<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table4c.png').default}
-			alt='Table 4c. Coefficients'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SIPMP</span>
+
+	<table>
+	<caption>
+		{' '}
+		**Table 4c**. Coefficients <sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2} colSpan={2}>Model</th>
+      <th colSpan={2}>Un-standardized <br /> Coefficients</th>
+      <th>Standardized <br /> Coefficients</th>
+      <th rowSpan={2}>t</th>
+      <th rowSpan={2}>Sig.</th>
+    </tr>
+		<tr>
+			<th>B</th>
+			<th>Std. ErrorB</th>
+			<th>Beta</th>
+		</tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th rowSpan={2}>1</th>
+      <th>(Constant)</th>
+      <td>7.815 </td>
+      <td>1.359</td>
+			<td></td>
+      <td>5.750</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <th>YPB</th>
+      <td>.313</td>
+      <td>.039</td>
+      <td>.515</td>
+      <td>8.012</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SICET</td>
+    </tr>
+  </tbody>
+</table>
+	
 </div>
 
-Table 4c estimates the relationship between YPB and the CES through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Personal meaning production’. Regression equation for estimating spiritual intelligence factor ‘personal meaning’ through practicing Bharatanatyam is analysed through:
+Table 4c estimates the relationship between YPB and the CES through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Personal meaning production’. Regression equation for estimating spiritual intelligence factor ‘personal meaning’ through practicing Bharatanatyam is analysed through: **YPB = 7.815 + (0.313 \* PMP)**
 
-**YPB = 7.815 + (0.313 \* PMP)**
-
-### 1.3.3 Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Transcendental awareness (TA):
+### 1.3.3. Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Transcendental awareness (TA)
 
 The third hypothesis analyses the relationship of YPB and TA (_Table 5a_) where the values of R (.525), R^2 (.276) and adjusted R^2 (.272) are obtained, where the 27.6% of dependent variable is described by the independent variable.
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>**_Table 5a._** Model Summary</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table5a.png').default}
-			alt='Table 5a. Model Summary'
-		/>
-	</figure>
-	<span>a. Predictors: (Constant), YPB</span>
+	
+	<table>
+	<caption>
+	{' '}
+	**Table 5a**. Model Summary
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2}>Model</th>
+      <th rowSpan={2}>R</th>
+      <th rowSpan={2}>R<sup>2</sup></th>
+      <th rowSpan={2}>Adjusted R<sup>2</sup></th>
+      <th rowSpan={2}>Std. Error of <br /> the Estimate</th>
+      <th colSpan={5}>Change Statistics</th>
+    </tr>
+		<tr>
+			<th>R2 Change</th>
+			<th>F Change</th>
+			<th>df1</th>
+			<th>df2</th>
+			<th>Sig. F Change</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>.515<sup>a</sup></td>
+      <td>.267</td>
+      <td>.272</td>
+      <td>3.49848</td>
+      <td>.276</td>
+      <td>67.809</td>
+      <td>1</td>
+      <td>178</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={10}>a. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 5b._** ANOVA<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table5b.png').default}
-			alt='Table 5b. ANOVA'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SICET</span>
+
+	<table>
+	<caption>
+	{' '}
+	**Table 5b**. ANOVA<sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th colSpan={2}>Model</th>
+      <th>Sum of Squares</th>
+      <th>df</th>
+      <th>Mean Square</th>
+      <th>F</th>
+      <th>Sig.</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowSpan={3}>1</td>
+      <th>Regression</th>
+      <td>829.944</td>
+      <td>1</td>
+      <td>829.944</td>
+      <td>67.809</td>
+      <td>.000<sup>b</sup></td>
+    </tr>
+    <tr>
+      <th>Residual</th>
+      <td>2178.606</td>
+      <td>178</td>
+      <td>12.239</td>
+			<td />
+			<td />
+    </tr>
+    <tr>
+      <th>Total</th>
+      <td>1432.994</td>
+      <td>179</td>
+      <td />
+      <td />
+      <td />
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SITA <br /> b. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
+</div>
+
+From ANOVA (_Table 5b_), the p value is observed as lesser than 0.05 (p < 0.0005) thus regression model substantially predicts outcomes reliably and ANOVA is significant.
+
+
+<div className='figureBox'>
+
+	<table>
+	<caption>
+		{' '}
+		**Table 5c**. Coefficients <sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2} colSpan={2}>Model</th>
+      <th colSpan={2}>Un-standardized <br /> Coefficients</th>
+      <th>Standardized <br /> Coefficients</th>
+      <th rowSpan={2}>t</th>
+      <th rowSpan={2}>Sig.</th>
+    </tr>
+		<tr>
+			<th>B</th>
+			<th>Std. ErrorB</th>
+			<th>Beta</th>
+		</tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th rowSpan={2}>1</th>
+      <th>(Constant)</th>
+      <td>10.265</td>
+      <td>1.955</td>
+			<td></td>
+      <td>5.252</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <th>YPB</th>
+      <td>.462</td>
+      <td>.056</td>
+      <td>.515</td>
+      <td>8.235</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SITA</td>
+    </tr>
+  </tbody>
+</table>
+
+</div>
+
+_Table 5c_ estimates the relationship between YPB and the TA through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Transcendental awareness’. Regression equation for estimating spiritual intelligence factor ‘awareness’ through practicing Bharatanatyam is analysed through: **YPB = 10.265 + (0.462 \* TA)**
+
+### 1.3.4. Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Conscious state thinking (CSE)
+
+The fourth hypothesis analyses the relationship of YPB and CSE (refer _Table 6a_) where the values of R (.349), R^2 (.122) and adjusted R^2 (.177) are obtained, where the 12.2% of dependent variable is described by the independent variable.
+
+<div className='figureBox'>
+
+<table>
+	<caption>
+	{' '}
+	**Table 6a**. Model Summary
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2}>Model</th>
+      <th rowSpan={2}>R</th>
+      <th rowSpan={2}>R<sup>2</sup></th>
+      <th rowSpan={2}>Adjusted R<sup>2</sup></th>
+      <th rowSpan={2}>Std. Error of <br /> the Estimate</th>
+      <th colSpan={5}>Change Statistics</th>
+    </tr>
+		<tr>
+			<th>R2 Change</th>
+			<th>F Change</th>
+			<th>df1</th>
+			<th>df2</th>
+			<th>Sig. F Change</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>.349a<sup>a</sup></td>
+      <td>.122</td>
+      <td>.122</td>
+      <td>8.14558</td>
+      <td>.276</td>
+      <td>24.738</td>
+      <td>1</td>
+      <td>178</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={10}>a. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
+
+
 </div>
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 5c._** Coefficients<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table5c.png').default}
-			alt='Table 5c. Coefficients'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SITA</span>
-</div>
 
-_Table 5c_ estimates the relationship between YPB and the TA through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Transcendental awareness’. Regression equation for estimating spiritual intelligence factor ‘awareness’ through practicing Bharatanatyam is analysed through:
+	<table>
+	<caption>
+	{' '}
+	**Table 6b**. ANOVA<sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th colSpan={2}>Model</th>
+      <th>Sum of Squares</th>
+      <th>df</th>
+      <th>Mean Square</th>
+      <th>F</th>
+      <th>Sig.</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowSpan={3}>1</td>
+      <th>Regression</th>
+      <td>1641.372</td>
+      <td>1</td>
+      <td>1641.372</td>
+      <td>24.738</td>
+      <td>.000<sup>b</sup></td>
+    </tr>
+    <tr>
+      <th>Residual</th>
+      <td>11810.378</td>
+      <td>179</td>
+      <td>66.350</td>
+			<td />
+			<td />
+    </tr>
+    <tr>
+      <th>Total</th>
+      <td>13451.750</td>
+      <td>179</td>
+      <td />
+      <td />
+      <td />
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SICSE <br /> b. Predictors: (Constant), YPB</td>
+    </tr>
+  </tbody>
+</table>
 
-**YPB = 10.265 + (0.462 \* TA)**
-
-### 1.3.4 Years-of-practising Bharatanatyam (YPB) and Spiritual intelligence (SI) factor Conscious state thinking (CSE):
-
-The fourth hypothesis analyses the relationship of YPB and CSE (refer table 6a) where the values of R (.349), R^2 (.122) and adjusted R^2 (.177) are obtained, where the 12.2% of dependent variable is described by the independent variable.
-
-<div className='figureBox'>
-	<figure>
-		<figcaption>**_Table 6a._** Model Summary</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table6a.png').default}
-			alt='Table 6a. Model Summary'
-		/>
-	</figure>
-	<span>a. Predictors: (Constant), YPB</span>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 6b._** ANOVA<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table6b.png').default}
-			alt='Table 6b. ANOVA'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SITA</span>
-	<span>b. Predictors: (Constant), YPB</span>
 </div>
 
 From ANOVA (_Table 6b_), the p value is observed as lesser than 0.05 (p < 0.0005) thus regression model substantially predicts outcomes reliably and ANOVA is significant.
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 6c._** Coefficients<sup>a</sup>
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table6c.png').default}
-			alt='Table 6c. Coefficients'
-		/>
-	</figure>
-	<span>a. Dependent Variable: SICSE</span>
+
+	<table>
+	<caption>
+		{' '}
+		**Table 6c**. Coefficients <sup>a</sup>
+	</caption>
+  <thead>
+    <tr>
+      <th rowSpan={2} colSpan={2}>Model</th>
+      <th colSpan={2}>Un-standardized <br /> Coefficients</th>
+      <th>Standardized <br /> Coefficients</th>
+      <th rowSpan={2}>t</th>
+      <th rowSpan={2}>Sig.</th>
+    </tr>
+		<tr>
+			<th>B</th>
+			<th>Std. ErrorB</th>
+			<th>Beta</th>
+		</tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th rowSpan={2}>1</th>
+      <th>(Constant)</th>
+      <td>60.984</td>
+      <td>4.551</td>
+			<td></td>
+      <td>13.400</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <th>YPB</th>
+      <td>.650</td>
+      <td>.131</td>
+      <td>.349</td>
+      <td>4.974</td>
+      <td>.000</td>
+    </tr>
+    <tr>
+      <td colSpan={7}>a. Dependent Variable: SICSE</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
-_Table 6c_ estimates the relationship between YPB and the CSE through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Conscious state expansion’. Regression equation for estimating spiritual intelligence factor ‘state expansion’ through practicing Bharatanatyam is analysed through:
-
-**YPB = 60.984 + (0.650 \* CSE)**
+_Table 6c_ estimates the relationship between YPB and the CSE through hypothesis, ‘there exists a significant relationship between the variables Years-of-practicing Bharatanatyam and Conscious state expansion’. Regression equation for estimating spiritual intelligence factor ‘state expansion’ through practicing Bharatanatyam is analysed through: **YPB = 60.984 + (0.650 \* CSE)**
 
 ## Process macro - Gender as moderator
 
 The moderating factor ‘gender’ is tested through Hayes-PROCESS Macro to test the association of practicing Bharatanatyam for years and spiritual intelligence. The R-value for developed model was found as 0.1721 and R^2 value was found as 0.0296; however the interaction among the variables were found as ‘insignificant’ (see _Table 7_ below).
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 7._** Hayes process for gender as moderator
-		</figcaption>
-		<img
-			src={require('@site/issue7/article04/kanaka-table7.png').default}
-			alt='Table 7. Hayes process for gender as moderator'
-		/>
-	</figure>
-	<span></span>
+
+<table>
+  <caption>
+  {' '}
+  **_Table 7._** Hayes process for gender as moderator
+  </caption>
+  <thead>
+    <tr>
+      <th colSpan={7} style={{textAlign:'left'}}>
+        Model 1. <br /> Y: stot <br /> X: qtot <br /> W: gender <br /> Sample Size: 180 <br /> OUTCOME VARIABLE:
+        Stot
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th colSpan={7}>Model Summary</th>
+    </tr>
+    <tr>
+      <th>R</th>
+      <th>R-sq</th>
+      <th>MSE</th>
+      <th>F</th>
+      <th>df1</th>
+      <th>df2</th>
+      <th>p</th>
+    </tr>
+    <tr>
+      <td rowSpan={2}>
+        <strong>.1721</strong>
+      </td>
+      <td rowSpan={2}>.0296</td>
+      <td rowSpan={2}>109.9577</td>
+      <td>1.7915</td>
+      <td rowSpan={2}>3.0000</td>
+      <td rowSpan={2}>176.0000</td>
+      <td rowSpan={2}>.1505</td>
+    </tr>
+    <tr>
+    <td>577</td>
+    </tr>
+    <tr>
+      <th colSpan={7}>Model</th>
+    </tr>
+    <tr>
+      <td />
+      <th>coeff</th>
+      <th>Se</th>
+      <th>t</th>
+      <th>P</th>
+      <th>LLCI</th>
+      <th>ULCI</th>
+    </tr>
+    <tr>
+      <td>Constant</td>
+      <td>181.6574</td>
+      <td>54.9083</td>
+      <td>3.3084</td>
+      <td>.0011</td>
+      <td>73.2938</td>
+      <td>290.0209</td>
+    </tr>
+    <tr>
+      <td>Qtot</td>
+      <td>-6.1438</td>
+      <td>3.9501</td>
+      <td>-1.5553</td>
+      <td>.1217</td>
+      <td>-13.9395</td>
+      <td>1.6520</td>
+    </tr>
+    <tr>
+      <td>Gender</td>
+      <td>-41.5836</td>
+      <td>27.9623</td>
+      <td>-1.4871</td>
+      <td>.1388</td>
+      <td>-96.7683</td>
+      <td>13.6011</td>
+    </tr>
+    <tr>
+      <td>Int_1</td>
+      <td>2.8190</td>
+      <td>2.0099</td>
+      <td>1.4026</td>
+      <td>.1625</td>
+      <td>-1.1476</td>
+      <td>6.7857</td>
+    </tr>
+    <tr>
+      <th colSpan={7}>Product terms key:</th>
+    </tr>
+    <tr>
+      <td colSpan={7}>Int_1: qtot * gender</td>
+    </tr>
+     <tr>
+      <th colSpan={7}>Test(s) of highest order unconditional interaction(s): </th>
+    </tr>
+    <tr>
+      <th />
+      <th>R2-chng</th>
+      <th>F</th>
+      <th>df1</th>
+      <th>df2</th>
+      <th>P</th>
+      <th />
+    </tr>
+    <tr>
+      <td>X*W</td>
+      <td>.0108</td>
+      <td>1.9672</td>
+      <td>1.0000</td>
+      <td>176.0000</td>
+      <td>.1625</td>
+      <td />
+    </tr>
+    <tr>
+      <td colSpan={7}> *Level of confidence for all confidence intervals in output: 95.0000</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
+
+
+
 
 **Inference**: Thus through _Table 7_, the outcome is found as p=0.1625 (i.e. p > 0.05) it is evident that there is no association between the tested hypothesis: years of practising Bharatanatyam and spiritual intelligence is moderated by gender. Thus hypothesis5 association between YPB and SI is moderated by gender is rejected.
 
@@ -517,19 +1049,78 @@ The moderating factor ‘gender’ is tested through Hayes-PROCESS Macro to test
 The hypotheses formulated were tested through regression and Hayes-PROCESS techniques for analysing the research aim; the testing results are:
 
 <div className='figureBox'>
-	<figure>
-		<figcaption>
-			**_Table 8._** Hypothesis-testing outcomes
+	
+  <table>
+		<caption>
+    {' '}
+			**Table 8.** Hypothesis-testing outcomes
 
-    	</figcaption>
-    	<img
-    		src={require('@site/issue7/article04/kanaka-table8.png').default}
-    		alt='Table 8. Hypothesis-testing outcomes'
-    	/>
-    </figure>
+    	</caption>
+  <thead>
+    <tr>
+      <th>S.NO</th>
+      <th>Hypothesis</th>
+      <th>Accepted/Rejected</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>
+        There exists a significant relationship between <br /> the variables Years of
+        practicing Bharatanatyam and <br /> Critical existential thinking
+      </td>
+      <td>
+        <strong>Accepted</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>
+        There exists a significant relationship between <br /> the variables Years of
+        practicing Bharatanatyam and <br /> Personal meaning production
+      </td>
+      <td>
+        <strong>Accepted</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>
+        There exists a significant relationship between <br /> the variables Years of
+        practicing Bharatanatyam <br /> and Transcendental awareness
+      </td>
+      <td>
+        <strong>Accepted</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>
+        There exists a significant relationship between <br /> the variables Years of
+        practicing Bharatanatyam <br /> and Conscious state expansion
+      </td>
+      <td>
+        <strong>Accepted</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>
+        Gender moderates the association between <br /> Spiritual intelligence and
+        Years of practising <br /> Bharatanatyam
+      </td>
+      <td>
+        <strong>Rejected</strong>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-  <span></span>
 </div>
+
+
+
 
 **Interpretation**: The _Table 8_ represents that formulated hypothesis **_H1, H2, H3_** and **_H4_** are accepted stating that practising Bharatanatyam for years, impacts the individuals’ spiritual intelligence level positively and contrarily, gender as moderating-factor is rejected, stating that, practising Bharatanatyam doesn’t have any impact upon dependent and independent factors.
 
