--- a/issue7/article05/2022-02-21.mdx
+++ b/issue7/article05/2022-02-21.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology'
+title: '#5 Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology'
 slug: towards-theory-of-supplicative-musicology
 description: 'The strong need for supplication to higher authorities or deities has been a key part of people’s life since the creation of humans. In African religions and all the modern-day religions (Christianity, Islam etc.), supplication is a major part of their religious practices. Adherents of those religions are encouraged to take part in corporate prayers, they are further encouraged to have a quiet time with their maker.'
 authors: [kayodem]
@@ -13,7 +13,7 @@ tags:
   ]
 ---
 
-# Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology
+# #5 Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology
 
 {/* truncate */}
 
@@ -27,14 +27,14 @@ Reviewed: Jun 12, 2021
 Accepted: Jul 20, 2021
 ```
 
-# Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology
+# #5 Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+			<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -169,7 +169,11 @@ Ifa will watch my house]
 	</figure>
 </div>
 
-In his paper, ‘The Vociferation of the oppressed: Emphatic underpinnings of Contemporary indigenous Christian prayer songs in Nigeria’, Adedeji (2017, 108), described some extra musical roles of music. According to him “music is created not just on aesthetic or artistic levels but also on emphatic levels. [...] music is used as a tool for socio-economic struggles and psycho-spiritual emancipation of the oppressed.” Furthermore, he described the prayer pattern in most Nigerian Churches these days as ‘radical’. He further explained how the prayer has been expressed musically. He listed invocation, warfare, supplication/petition, protest and deliverance as the divisions of prayer songs. Part of his research findings showed that adherents of the prayer fellowships are relieved psychologically after communicating with their God through the singing of those lyric airs contextualized as prayer (2017, 112). The song in the _Example 2_, titled Ire ayo mi (‘My goodness and joy’) is a typical song of supplication in Christian gatherings. The song is a plea to God for goodness and joy, the song went further, telling God to speedily harken to the request of the singer, to prevent evil people from mocking him/her.
+In his paper, ‘The Vociferation of the oppressed: Emphatic underpinnings of Contemporary indigenous Christian prayer songs in Nigeria’, Adedeji (2017, 108), described some extra musical roles of music. According to him 
+
+> music is created not just on aesthetic or artistic levels but also on emphatic levels. (...) music is used as a tool for socio-economic struggles and psycho-spiritual emancipation of the oppressed.
+
+ Furthermore, he described the prayer pattern in most Nigerian Churches these days as ‘radical’. He further explained how the prayer has been expressed musically. He listed invocation, warfare, supplication/petition, protest and deliverance as the divisions of prayer songs. Part of his research findings showed that adherents of the prayer fellowships are relieved psychologically after communicating with their God through the singing of those lyric airs contextualized as prayer (2017, 112). The song in the _Example 2_, titled Ire ayo mi (‘My goodness and joy’) is a typical song of supplication in Christian gatherings. The song is a plea to God for goodness and joy, the song went further, telling God to speedily harken to the request of the singer, to prevent evil people from mocking him/her.
 
 ### Ire Ayo Mi
 
@@ -274,7 +278,7 @@ I am sure of it]
 
 ## Analysis Of Some Supplicative Liturgical Art Music Compositions
 
-### EMI YIO GBE OJU MI SOKE WONNI
+### Emi Yio Gbe Oju Mi Soke Wonni
 
 Author: T. K. E. Philips (1884-1969)
 
@@ -354,7 +358,7 @@ In the composition, the composer used the Yoruba translation of Psalm 121, a bib
 
 The music is arranged for male choir comprising of boys and men with keyboard accompaniment. The song has been adapted for mixed choirs (male and female) in many cases. The pattern of the composition is through composed. The music began with an interchange of semi choirs (boys and men) singing in unison between bars 1 to 8. There was antiphonal singing between the men and the boys from bar 9, before the texture changed to homophonic texture from bars 12 to 15. A flattened seventh was sounded by the bass on bar 15, a note that changed the tonal center from G to C in the subsequent baritone solo from bars 16 to 23. The choir in unison continued from bar 23, before changing to homophonic harmonic style from the last beat on bar 25 to bar 28. The harmonic style became contrapuntal from bars 29 to 33. The choir sang in unison from bars 34 to 38. From bars 39 to 46, the four parts sang a parallel melody on different modes beginning from the altos to basses to tenors and the trebles with a one phrase alto counter melody towards the cadential section of the basses (bars 41 and 42), and a similar counter melody by the tenors before the cadential section of the trebles (bars 45 and 46). The harmonic pattern from bars 47 to 60 is a combination of unison (47-50, 56-58), counterpoint (52-54) and homophonic pattern (50-52, 54-56 & 69-60).
 
-### ADURA FUN ALAFIA
+### Adura Fun Alafia
 
 Author: Ayo Bankole (1935-1976)
 
@@ -430,7 +434,7 @@ The song is a prayer for peace. The text opened with a statement of purpose, whi
 
 The melody of the song is within a narrow range of a major seventh (C4- B flat 4). The range showed that the melody will be convenient for most vocal range. The composer was able to bring colour to the melody by a good variation of a number of rhythmic modes. One of the very good quality of the melody is the perfect adherence of the melody to the tonal inflection of the textual meaning of the song. The accompaniment showed a strong element of African pianism and drumistic piano. The ostinato pattern with a little variant was used in the accompaniment of the song in a style that simulate the Yoruba dundun cyclic drumming.
 
-### JESU WA FARA RE HAN
+### Jesu Wa Fara Re Han
 
 Author: Debo Akinwumi (1956-2005)
 
@@ -508,7 +512,7 @@ The definitions of musical composition by a number of scholars, was examined in 
 
 Supplication is synonymous to petition and prayer. Supplication can be described as entreating for favour from someone in position to help the petitioner. The research discussed the issue of supplication and the role of vocal music from the angle of Yoruba traditional religion, it went ahead to discuss it from the perspective of Christian religion. Furthermore, how popular music has been used to plead with the government of Nigeria for a better condition of living was also discussed. Another supplication which is common in the pre-election preparation is when politicians use vocal music amongst other things to canvass for votes was also discussed. In all of the aforementioned supplicative instances, the work gave practical examples.
 
-In the development of African art compositional musicology in the last century, composers of vocal art music have been motivated to address a number of extra musical issues in their vocal compositions One of which is asking God for one favour or the other. The research is focused on three of such Art music compositions, composed for liturgical usage. In one of the earliest Yoruba art music choral compositions titled Emi yiogbeoju mi soke wonni (‘I will lift my eyes unto the hills’), T. K. E. Philips used the Yoruba translation of Psalm 121, which is one of the psalms that are renowned for praying by Christian faithful and even some non-Christians. Ayo Bankole, composed the text and the music of Adura fun alaafia (‘Prayer for peace’), where he raised a number of prayer points that are sine qua non for living in peace within a community. Debo Akinwumi’s Jesu wafara re han (‘Jesus, come and manifest yourself’) is a prayer of blessing and plea for Godly virtues in the life of a newly married couple. The writer believes that Akinwumi was motivated to write the song because building strong families will lead to a strong nation. In an earlier statement which is in agreement with what the above composers did, Leckebusch said, ‘appropriate tune can take words to another level when set to music.’ ([source])(https://youtu.be/T1SfdeF7f3A) Adedeji (2017), also noted that, ‘people who normally sing this prayer song are normally satisfied psychologically after singing the prayer song.’
+In the development of African art compositional musicology in the last century, composers of vocal art music have been motivated to address a number of extra musical issues in their vocal compositions One of which is asking God for one favour or the other. The research is focused on three of such Art music compositions, composed for liturgical usage. In one of the earliest Yoruba art music choral compositions titled Emi yiogbeoju mi soke wonni (‘I will lift my eyes unto the hills’), T. K. E. Philips used the Yoruba translation of Psalm 121, which is one of the psalms that are renowned for praying by Christian faithful and even some non-Christians. Ayo Bankole, composed the text and the music of Adura fun alaafia (‘Prayer for peace’), where he raised a number of prayer points that are sine qua non for living in peace within a community. Debo Akinwumi’s Jesu wafara re han (‘Jesus, come and manifest yourself’) is a prayer of blessing and plea for Godly virtues in the life of a newly married couple. The writer believes that Akinwumi was motivated to write the song because building strong families will lead to a strong nation. In an earlier statement which is in agreement with what the above composers did, Leckebusch said, ‘appropriate tune can take words to another level when set to music.’ ([source](https://youtu.be/T1SfdeF7f3A)) Adedeji (2017), also noted that, ‘people who normally sing this prayer song are normally satisfied psychologically after singing the prayer song.’
 
 This work is another attempt to encourage more art music compositions that are contextualized for supplicative purposes. The need for supplication should be one of the pre-compositional consideration in the mind of composers of vocal art music in the midst of overwhelming social cultural, economic challenges and the level of insecurity, that the government of the day cannot handle in most nations of the world, particularly Nigeria. It is important to compose music that will meet the supplicative heart desires of the populace.
 
@@ -527,7 +531,7 @@ This work is another attempt to encourage more art music compositions that are c
 7. Nzewi, M. 1984. "Traditional Strategies for Mass Communication: The Centrality of Igbo Music." Selected Reports In _Ethnomusicology, 5: 319-338._
 8. Ofosu, J, 1997. "Modernity and Ovwuvwe: A Socio-Cultural Process of the Abraka Clan in Urhobo Land" in _Bode Omojola (ed) Music and Social Dynamics in Nigeria_, Ilorin Department of Performing Arts, University of Ilorin. 34-37.
 9. Ogungbemi, S. 2017. “Traditional Belief System.“ In _Culture and Customs of the Yoruba_, edited by T. Falola and A. Akinyemi, 309-324. Austin: Pan-African University Press.
-10. Oludare, O. 2017: “Preserving History Through Popular Music: A study of Ebenezer Obey’s Juju Music.“ _West African Journal of Musical Arts Education (WAJMAE), vol. 4 (1): 51-65_.
+10. Oludare, O. 2017: “Preserving History Through Popular Music: A study of Ebenezer Obey’s Juju Music.“ _West African Journal of Musical Arts Education (WAJMAE), vol. 4(1): 51-65_.
 11. Omojola, O. 2006. _Popular Music in Western Nigeria: Theme, Style and Patronage_. Ibadan: IFRA.
 12. Onwuekwe, A. 2016. ”Structural Analysis of Idolor’s ‘Glory Hallelujah to his name’.“ In _Music Scholarship and performance challenges in 21st century Africa: A critical sssresource book in honour of Emerobome_, edited by K. I. Eni, B. Binebai and S. O. Ikibe. Lagos: Bahiti and Dalila Publishers.
 13. Randel, D. 1986. _The New Harvard Dictionary of Music_. Harvard: The Belkarp Press of Harvard University.
