--- a/issue7/article06/2022-02-20.mdx
+++ b/issue7/article06/2022-02-20.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Musical Track Analysys of Christie Essien Igbokwe Ife'
+title: '#6 Musical Track Analysys of Christie Essien Igbokwe Ife'
 slug: musical-track-analysys-of-christie-essien-igbokwe-ife
 description: "Christie Essien Igbokwe (1960-2011) was popularly known as “Nigeria's Lady of Song”. In her music Essien addressed many issues, such as love among people, community, association, woman-man relationship childhood. Moreover, her passion for peace, equity and fairness put her among those that championed the creation of some States, specifically Akwa Ibom and the new Anambra."
 authors: [ealemede]
@@ -13,7 +13,7 @@ tags:
   ]
 ---
 
-# Musical Track Analysys of Christie Essien Igbokwe Ife
+# #6 Musical Track Analysys of Christie Essien Igbokwe Ife
 
 {/* truncate */}
 
@@ -27,14 +27,14 @@ Reviewed: Jan 24, 2022
 Accepted: Feb 04, 2022
 ```
 
-# Musical Track Analysys of Christie Essien Igbokwe "Ife"
+# #6 Musical Track Analysys of Christie Essien Igbokwe "Ife"
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+			<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -88,13 +88,16 @@ export function Name({ author, affil, email }) {
 
 ## Introduction
 
-### Advisory Musicology Analysys
-
-The song started with the instrumental introduction. It was followed by a call to unity, that working together as a team will move the nation forward. There is the prospect in teamwork than trying to work alone. Nigeria has been experiencing a high level of inhuman treatment in the hands of its leaders. The civil war came as a result of marginalization. The war was and has been still till date the experience of the marginalized people who encountered a staggering degree of drawbacks in light of public strategies that appeared to be created to subvert their capacity to augment political and financial possibilities. This was the experience of the Igbo people as stated by Nsoedo (2019). After the war was over, the nation was still in the same situation. The rich were getting richer while the poor were getting worse off by the day. Every political group with a different opinion on how the nation can develop trying to win the votes of the masses yet the ruling class held on to power without considering the oath of office taken by them. The unity of the country monetized for the benefit of the corrupt system. A Yoruba philosophy that states thus owo kan ko gbe eru de ori meaning “with joint effort, success is sure.” Mohammed (2021) stated that
+The song started with the instrumental introduction. It was followed by a call to unity, that working together as a team will move the nation forward. There is the prospect in teamwork than trying to work alone. Nigeria has been experiencing a high level of inhuman treatment in the hands of its leaders. The civil war came as a result of marginalization. The war was and has been still till date the experience of the marginalized people who encountered a staggering degree of drawbacks in light of public strategies that appeared to be created to subvert their capacity to augment political and financial possibilities. This was the experience of the Igbo people as stated by Nsoedo (2019). After the war was over, the nation was still in the same situation. The rich were getting richer while the poor were getting worse off by the day. Every political group with a different opinion on how the nation can develop trying to win the votes of the masses yet the ruling class held on to power without considering the oath of office taken by them. The unity of the country monetized for the benefit of the corrupt system. A Yoruba philosophy that states thus owo kan ko gbe eru de ori meaning “with joint effort, success is sure.” Mohammed (2021) stated that:
 
 > In Nigeria the masses live like hostages plagued by poverty, terrorists, bandits and criminals and oppressed by those elected to superintend over their affairs. The people are kept permanently divided along tribal and religious lines by greedy politicians who benefit from such prejudices and stereotypes. I make bold to say that I am a fully-fledged. I am of a Northern parentage. I grew up in the East and I worked in the South-West before my sojourn abroad. In those days our unity was desirable and sustainable. But today, things have fallen apart; national unity is fractured so much so that nobody is proud to be identified as a Nigeria. (Mohammed 2021)
 
-Essien went further by saying let us love one another, walk together, and shunning all forms of enmity among ourselves. If the people and the nation are to progress, there is need to be united. She laid more emphasis on the need for love in Nigeria in the first line of the second verse of her song - it is the love of everyone that we sought for in Nigeria. Once there is love the issue of bad governance will be eradicated. This means everybody must show love. She advised that if there would be any form of quarrel, it should be that which will bring us together in Nigeria meaning a fight of unity for our fatherland and fight of unity for Africa. Nigeria is the combination of people from different ethnic groups, culture and believes. More emphasis is laid on the need for unity in the country, which can only be built on love. A musical and lyrical expression is shown below as sung by the Lady of Songs in Ife in musical notation as in _Example 1a_:
+
+Essien went further by saying let us love one another, walk together, and shunning all forms of enmity among ourselves. If the people and the nation are to progress, there is need to be united. She laid more emphasis on the need for love in Nigeria in the first line of the second verse of her song - it is the love of everyone that we sought for in Nigeria. Once there is love the issue of bad governance will be eradicated. This means everybody must show love. She advised that if there would be any form of quarrel, it should be that which will bring us together in Nigeria meaning a fight of unity for our fatherland and fight of unity for Africa. 
+
+## Advisory Musicology Analysys
+
+Nigeria is the combination of people from different ethnic groups, culture and believes. More emphasis is laid on the need for unity in the country, which can only be built on love. A musical and lyrical expression is shown below as sung by the _Lady of Songs_ in Ife in musical notation as in _Example 1a_:
 
 <div className='poetry'>
 
