--- a/issue8/article01/2023-02-25-art.mdx
+++ b/issue8/article01/2023-02-25-art.mdx
@@ -1,5 +1,5 @@
 ---
-title: '​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)'
+title: '#1 ​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)'
 description: 'An upsurge in enrollment into postgraduate music courses in Nigeria in recent times, has resulted in an increasing number of research in different areas of music studies at the doctoral level.'
 slug: annotated-bibliography-nigeria
 authors: [igbi, bekwenu, caluede]
@@ -7,33 +7,33 @@ tags: [doctorate degree, theses, music education, music scholarship, Nigeria]
 date: 2023-02-25
 ---
 
-# ​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)
+# #1 ​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)
 
 {/* truncate */}
 
 ```
 UDC: 016.378.245(669)"2011/2021
-    378.245:78(669)"2011/2021"
-    COBISS.SR-ID 109558793
-    _________________
-    Received: Jan 10, 2023
-    Reviewed: Jan 28, 2023
-    Accepted: Feb 15, 2023
+     378.245:78(669)"2011/2021"
+COBISS.SR-ID 109558793
+_________________
+Received: Jan 10, 2023
+Reviewed: Jan 28, 2023
+Accepted: Feb 15, 2023
 ```
 
-# ​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)
+# #1 ​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
 
-<div className='mt-12 flex flex-col items-center'>
+<div className='authors'>
 <Name
 	author='Oghenemudiakevwe Igbi'
 	affil='Department of Theatre Arts, University of Africa,
@@ -141,283 +141,195 @@ However, the number of Nigerian music scholars with postgraduate degrees from ov
 
 [Author. Affiliation. Theses. Institution]
 ​
-Loko, Olasumbo. Lagos State University of Education, Otto Ijanikin.
+<div className='text-xs'>
+
+- Loko, Olasumbo. Lagos State University of Education, Otto Ijanikin.
 Theses: “Liturgical Music in the Cherubim and Seraphim in Lagos State”, 2011. University of Ibadan.
-
-Onyekwelu, Joseph N. Retired from University of Nigeria, Nsukka.
+- Onyekwelu, Joseph N. Retired from University of Nigeria, Nsukka.
 Theses: “A Study of Oja in Igbo Culture: Its Local and Global Prospects”, 2011. Delta State University, Abraka.
-
-Ojukwu, V. E. Nnamdi Azikiwe University, Awka.
+- Ojukwu, V. E. Nnamdi Azikiwe University, Awka.
 Theses: “Dysfunctional Music Education in the Junior Secondary Schools in Anambra State, Nigeria”, 2011. Nnamdi Azikiwe University, Awka.
-
-Forchu, I. University of Nigeria, Nsukka.
+- Forchu, I. University of Nigeria, Nsukka.
 Theses: “Implications of the Relationship between Musical Preferences and Behavioral Patterns of Nigerian Adolescents towards Human Development: A Study of Enugu Town”, 2011. Nnamdi Azikiwe University, Awka
-
-Nwobu, Stella N. Odumegwu Ojukwu University, Ulli.
+- Nwobu, Stella N. Odumegwu Ojukwu University, Ulli.
 Theses: “The Ufie Instrument in Igbo Culture: The Socio-Cultural Implications of its Music in Awka South Local Government Area; Anambra State”, 2011. Nnamdi Azikiwe University, Awka.
-
-Akpakpan, J. University of Uyo.
+- Akpakpan, J. University of Uyo.
 Thses: “Contemporary Compositional Approach to the Creation of Ekpo Spirit-Manifest Music of the Annang People”, 2011. Nnamdi Azikiwe University, Awka.
-
-Ugochukwu, Benerdette C. Ignatius Ajuru University of Education, Rumuolemini, Port Harcourt.
+- Ugochukwu, Benerdette C. Ignatius Ajuru University of Education, Rumuolemini, Port Harcourt.
 Theses: “In-Class and Out-Class Teaching and Learning of Music among the Disabled in Port Harcourt Special Education Schools and Cheshire Home”, 2011. Nnamdi Azikiwe University, Awka
-
-Olisaeke, F. I. Federal College of Education, Pankshin.
+- Olisaeke, F. I. Federal College of Education, Pankshin.
 Theses: “Harnessing the Potentials of the Traditional Horn Xylophone (Kudung) of the Berom of Plateau State for Contemporary Composition”, 2012. Nnamdi Azikiwe University, Awka.
-
-Olorunsogo, I. Federal College of Education, Osiele, Abeokuta, Ogun State.
+- Olorunsogo, I. Federal College of Education, Osiele, Abeokuta, Ogun State.
 Theses: “A Model of African Music Curriculum for Universal Basic Education (UBE) Programme in Nigeria”, 2012. University of Ibadan.
-
-Olaleye, O. University of Ibadan.
+- Olaleye, O. University of Ibadan.
 Theses: “The Social Context of Selected Yoruba Traditional Musical Forms”, 2012. University of Lagos.
-
-Kehinde, S. University of Lagos.
+- Kehinde, S. University of Lagos.
 Theses:“Chromaticism in the 19th and 20th Centuries in the Selected Works of Robert Schumann and Arnold Schoenberg in Relation to Some Musical Pieces in African Cultures”, 2012. University of Lagos.
-
-Okonkwo, V. N. University of Port Harcourt.
+- Okonkwo, V. N. University of Port Harcourt.
 Theses: ”Manpower Development of Music in Anambra State Secondary Schools”, 2013. Delta State University, Abraka.
-
-Ubani, Anozie. Deceased.
+- Ubani, Anozie. Deceased.
 Theses: “An Analysis of the Compositional Techniques of Daniel Christian Chikpezie Agu”, 2013. Delta State University, Abraka.
-
-Ibude, Isaac. University of Port Harcourt, Rivers State.
+- Ibude, Isaac. University of Port Harcourt, Rivers State.
 Theses: “Music in Kalabari Funeral Rites”, 2013. University of Ibadan.
-
-Titus, S. O. Obafemi Awolowo University, Ile-Ife.
+- Titus, S. O. Obafemi Awolowo University, Ile-Ife.
 Theses: “Structure and Function of Iregun Music in Yagbaland, Kogi State, Nigeria”, 2013. University of Ibadan.
-
-Anya, Njoku, M. C. University of Nigeria, Nsukka.
+- Anya, Njoku, M. C. University of Nigeria, Nsukka.
 Theses: “The Contributions of Teachers to the Unpopularity of Music as a School Subject: A Study of Federal Government Colleges in Enugu Education Zone”, 2013. Nnamdi Azikiwe University, Awka.
-
-Okafor, Enoh. University of Delta, Agbor.
+- Okafor, Enoh. University of Delta, Agbor.
 Theses: “Ten Contemporary Compositions Reflecting Urhobo and Western Idioms”, 2014. Nnamdi Azikiwe University, Awka
-
-Ekezie, Ngozi L. Alvan Ikoku Federal College of Education, Owerri.
+- Ekezie, Ngozi L. Alvan Ikoku Federal College of Education, Owerri.
 Theses: “Contemporary Art Music for Christian Worship in Igbo Liturgical Setting: Original Compositions”, 2014. Nnamdi Azikiwe University, Awka.
-
-Akponome, Abel O. Diseased.
+- Akponome, Abel O. Diseased.
 Theses: “Folk Music in Contemporary Nigeria: Continuity and Change”, 2014. Ahmadu Bello University Zaria.
-
-Uche, M. A. University of Delta, Agbor.
+- Uche, M. A. University of Delta, Agbor.
 Theses: “Effects and Socio-cultural Implications of Song-Texts among Communities in Oshimili South Local Government of Delta State, Nigeria”, 2015. Nnamdi Azikiwe University, Awka.
-
-Oguoma, Patience U. Alvan Ikoku Federal College of Education, Owerri.
+- Oguoma, Patience U. Alvan Ikoku Federal College of Education, Owerri.
 Theses: “The Musical Activities of the Adolescent Girls in Alaenyi and Uzina Abosi Traditional Societies of Imo State, Nigeria”, 2015. Nnamdi Azikiwe University, Awka.
-
-Ofuani, Sunday. Delta State University, Abraka.
+- Ofuani, Sunday. Delta State University, Abraka.
 Theses: “Iwa Ji Ofuu-Cantata and Four Instrumental Solos: A Compositional Research on Nationalism, Interculturalism and Individualism”, 2015. Nnamdi Azikiwe University, Awka.
-
-Owoaje, Tolulope Olusola. University of Ibadan.  
+- Owoaje, Tolulope Olusola. University of Ibadan.  
 Theses: “The Yoruba Native Air Tradition of Choral Music in Christian Liturgy, 1920-1980”, 2014. University of Ibadan.
-
-Ogunlade, Julius D. (affiliation unknown)
+- Ogunlade, Julius D. (affiliation unknown)
 Theses: “Church Choral Directing: In African Tradition”, 2014. Nigerian Baptist Theological Seminary, Ogbomoso.
-
-Ogunleye, Adeolu A. Good News Baptist Church, Surulere, Lagos.
+- Ogunleye, Adeolu A. Good News Baptist Church, Surulere, Lagos.
 Theses: “Sacred Musicological Analysis of Alewilse, an Oratorio Based on Genesis Chapters 12-21”, 2015. Nigerian Baptist Theological Seminary, Ogbomoso.
-
-Oyeniyi, Gabriel A. Nigerian Baptist Theological Seminary, Ogbomoso.
+- Oyeniyi, Gabriel A. Nigerian Baptist Theological Seminary, Ogbomoso.
 Theses: “Exploring Yoruba Sacred Musical Compositions for the Edification of Church Members: A Case Study of Jesu Olugbala, an Indigenous Cantata”, 2015. Nigerian Baptist Theological Seminary, Ogbomoso.
-
-Babalola, S. O.Lagos State University of Education, Oto/Ijanikin, Lagos.
+- Babalola, S. O.Lagos State University of Education, Oto/Ijanikin, Lagos.
 Theses: “Legacy of Zangheto Music among the Ogu of Badagry, Lagos, State, Nigeria”, 2015. University of Ibadan.
-
-Oludare, O. University of Lagos.
+- Oludare, O. University of Lagos.
 Theses: “An Analysis of Thematic Development in Selected Yoruba popular Music since 1930”, 2016. University of Lagos.
-
-Odunuga, A. F. Adeyemi College of Education, Ondo.
+- Odunuga, A. F. Adeyemi College of Education, Ondo.
 Theses: “Impact of Teachers’ Competence on Students’ Academic Achievement in Music in Upper Basic Schools in South-west”, 2016. University of Lagos.
-
-Agbo, B. N.Music Department, University of Nigeria, Nsukka.
+- Agbo, B. N.Music Department, University of Nigeria, Nsukka.
 Theses: “The Inculturation of Liturgical Music of the Roman Catholic Church in Igboland: A Compositional Study”, 2016. Nnamdi Azikiwe University, Awka.
-
-Adeola, Taye. Department of Performing Arts, University of Ilorin.
+- Adeola, Taye. Department of Performing Arts, University of Ilorin.
 Theses: “Towards a Theory for the Nigerian Gospel Music”, 2016. University of Ilorin.
-
-Giami, Evangeline. Ignatius Ajuru University, Port Harcourt.
+- Giami, Evangeline. Ignatius Ajuru University, Port Harcourt.
 Theses: “Leela: Contemporary Vocal and Instrumental Compositions for Religious and Entertainment Purposes”, 2017. Nnamdi Azikiwe University, Awka.
-
-Okpara, M. U. Music Department, Babcock University, Ilishan-Remo, Ogun State.
+- Okpara, M. U. Music Department, Babcock University, Ilishan-Remo, Ogun State.
 Theses: “Indigenous Compositions and Arrangements in Different Media for Igbo Anglican Churches and Secondary Schools”, 2017. Nnamdi Azikiwe University, Awka.
-
-Adeoye, Julius O. Osun State College of Education, Ilesa.
+- Adeoye, Julius O. Osun State College of Education, Ilesa.
 Theses: “Evaluation of the Personality and Role of Women in Nigerian Music Education in Selected Colleges of Education”, 2017. Obafemi Awolowo University, Ile- Ife.
-
-Babarinde, Damilola M. (affiliation unknown)
+- Babarinde, Damilola M. (affiliation unknown)
 Theses: “The Hybridisation of Christian Gospel Music in South-West, Nigeria”, 2017. University of Ilorin.
-
-Akinyemi, Akinwunmi N. Shepherd hill Baptist Church, Obanikoro, Lagos.
+- Akinyemi, Akinwunmi N. Shepherd hill Baptist Church, Obanikoro, Lagos.
 Theses: “Historical Development and Musico-Theological Analysis of Indigenous Hymnody of Christ Apostolic Church, Southwest, Nigeria”, 2017. Obafemi Awolowo University, Ile- Ife.
-
-Abolagba, John A. College of Education, Ekiadolor.
+- Abolagba, John A. College of Education, Ekiadolor.
 Theses: “A Comparative Study of Music Programmes of the Obafemi Awolowo University, Ile-Ife and Nnamdi Azikiwe University, Awka”, 2017. Delta State University, Abraka.
-
-Dick-Duvwarovwo, Ereforo. College of Education, Warri, Delta State.
+- Dick-Duvwarovwo, Ereforo. College of Education, Warri, Delta State.
 Theses: “An Ethnomusicological Study of Indigenous Recreational Music of the Urhobo in Delta State”, 2017. Delta State University, Abraka.
-
-Thikan, Nathan D. D. Providence-Delta Baptist Conference.
+- Thikan, Nathan D. D. Providence-Delta Baptist Conference.
 Theses: “A Study of Church Music in Egbemaland in Edo and Delta States of Nigeria, 1938 – 2014”, 2017. Delta State University, Abraka.
-
-Bolaji, David. University of Port Harcourt.
+- Bolaji, David. University of Port Harcourt.
 Theses: “A Creative Approach to the use of African and Western Idioms in Campus Life: A Musical Satire”, 2017. Delta State University, Abraka.
-
-Igbi, Oghenemudiakevwe. University of Africa, Toru-Orua.
+- Igbi, Oghenemudiakevwe. University of Africa, Toru-Orua.
 Theses: “An Eclectic Approach to Creating African Art Music, with Special Reference to the Oratorio”, 2017. Delta State University, Abraka.
-
-Okpeki, Philo I. Department of Music, Delta State University, Abraka.
+- Okpeki, Philo I. Department of Music, Delta State University, Abraka.
 Theses: “The Evolution of Music on Television in South-Western Nigeria: 1959-2014”, 2017. Delta State University, Abraka.
-
-Efurhievwe, Margaret. Department of Music, Delta State University, Abraka.
+- Efurhievwe, Margaret. Department of Music, Delta State University, Abraka.
 Theses: “Music Production Practices in Recording Studios in South-South Geo-Political Zone in Nigeria”, 2017. Delta State University, Abraka.
-
-Amao, Timothy A. Nigerian Baptist Theological Seminary, Ogbomoso.
+- Amao, Timothy A. Nigerian Baptist Theological Seminary, Ogbomoso.
 Theses: “Exploring Music Composition for Peacemaking among Christians in Ogbomoso Baptist Conference”, 2017. Nigerian Baptist Theological Seminary, Ogbomoso.
-
-Alaba, Opeyemi Ricketts. Nigerian Baptist Theological Seminary, Ogbomoso.
+- Alaba, Opeyemi Ricketts. Nigerian Baptist Theological Seminary, Ogbomoso.
 Theses: “Analysis of Selected Piano Music as a Vehicle for Diverse Congregational Worship Experiences”, 2017. Nigerian Baptist Theological Seminary, Ogbomoso.
-
-Ofili, Doris K. University of Port Harcourt.
+- Ofili, Doris K. University of Port Harcourt.
 Theses: “Music Pedagogy for Pupils and Students with Special Needs in Christie Toby Inclusive Centre, Port Harcourt, Rivers State”, 2018. Nnamdi Azikiwe University, Awka.
-
-Amaegbe, Esinkuma J. University of Port Harcourt.
+- Amaegbe, Esinkuma J. University of Port Harcourt.
 Theses: “An Appraisal of Technology-Based Music Courses in Nigerian Universities”. 2018. Nnamdi Azikiwe University, Awka.
-
-Albert, Alfred G. University of Port Harcourt.
+- Albert, Alfred G. University of Port Harcourt.
 Theses: “Unity in Diversity: Original and Arranged Vocal and Instrumental Works”, 2018. Nnamdi Azikiwe University, Awka.
-
-Ajayi, O. V. Obafemi Awolowo University, Ile-Ife.
+- Ajayi, O. V. Obafemi Awolowo University, Ile-Ife.
 Theses: “Musical Structure and Cultural Identity of Highlife Music in Southwestern Nigeria”, 2018. Obafemi Awolowo University, Ile- Ife.
-
-Adekola, Olaolu E. Emmanuel Alayande College of Education, Oyo.
+- Adekola, Olaolu E. Emmanuel Alayande College of Education, Oyo.
 Theses: “The Dynamics of Agidigbo Music among the Yoruba of Southwestern Nigeria”, 2018. University of Ibadan.
-
-Ayoade, Jacob E. Federal College of Education, Okene.
+- Ayoade, Jacob E. Federal College of Education, Okene.
 Theses: “Analysis of Styles and Performance Practices of Adamo Music in Ijesaland”, 2018. Obafemi Awolowo University, Ile- Ife.
-
-Olusola, Kayode O. City of Knowledge Academy, Ijebu Ode.
+- Olusola, Kayode O. City of Knowledge Academy, Ijebu Ode.
 Theses: “A Study of Cultural Concepts and Creativity in Orlando Owoh’s Juju Music”, 2018. Obafemi Awolowo University, Ile- Ife.
-
-Akperi, Y. A. Baptist Seminary, Benin City.
+- Akperi, Y. A. Baptist Seminary, Benin City.
 Theses: “An Appraisal of the Philosophy of Tertiary Music Programmes in Nigeria: (1962 – 2010)”, 2018. Delta State University, Abraka.
-
-Ekewenu, Bruno D. Department of Music, Delta State University, Abraka.
+- Ekewenu, Bruno D. Department of Music, Delta State University, Abraka.
 Theses: “An Ethnomusicological Study of Igbe Music of the Urhobo”, 2018. Delta State University, Abraka.
-
-Ekpo, Ime S. Department of Music, University of Uyo.
+- Ekpo, Ime S. Department of Music, University of Uyo.
 Theses: “A Study of Indigenous Methods of Teaching Efik-Ibibio Traditional Music as a Model for Formal Music Teaching in Nigeria”, 2018. Delta State University, Abraka.
-
-Odogbor, Peter. O. Department of Theatre Arts, University of Benin.
+- Odogbor, Peter. O. Department of Theatre Arts, University of Benin.
 Theses: “A Study of the Production Process of Nigerian Popular Music Videos in Southern Nigeria”, 2018. Delta State University, Abraka.
-
-Okoro, J. C. 2018. Department of Music, Delta State University, Abraka.
+- Okoro, J. C. 2018. Department of Music, Delta State University, Abraka.
 Theses: “Abigbo Music in Mbaise: A Study of its Philosophy, Inventiveness and Values”, 2018. Delta State University, Abraka.
-
-Sunday-Kanu, Rita A. University of Port Harcourt.
+- Sunday-Kanu, Rita A. University of Port Harcourt.
 Theses: “Media and Indigenous Music Performance Practices in Rivers State: An Evaluation of the Cultural Policy for Nigeria”, 2018. Nnamdi Azikiwe University, Awka.
-
-Nnam, Jude C. National Music Director, National Catholic Liturgical Music Council of Nigeria.
+- Nnam, Jude C. National Music Director, National Catholic Liturgical Music Council of Nigeria.
 Theses: “Egwu Nganga: A Set of Original Contemporary Choral Compositions”, 2018. Nnamdi Azikiwe University, Awka.
-
-Osele, Angelina A. (affiliation unknown)
+- Osele, Angelina A. (affiliation unknown)
 Theses: “Ojorima Cultural Bongo Music in Owerri: An Expository Study of the Life and Works of Opara Hyacinth Armstrong”, 2018. Nnamdi Azikiwe University, Awka.
-
-Olubukola, Oluwatade J. Mountain Top University, Ibafo, Ogun State.
+- Olubukola, Oluwatade J. Mountain Top University, Ibafo, Ogun State.
 Theses: “Analysis of the Modification in Selected Yoruba Folksongs”, 2019. University of Lagos.
-
-Omuku, Precious A. University of Port Harcourt.
+- Omuku, Precious A. University of Port Harcourt.
 Theses: “Systemization of Choral Pedagogical Approaches amongst Selected Choirs in Port Harcourt”, 2019. Nnamdi Azikiwe University, Awka.
-
-Olaosibikan, Oluwarotimi.The Polytechnic Ibadan.
+- Olaosibikan, Oluwarotimi.The Polytechnic Ibadan.
 Theses: “Emergence and Development of Tungba Gospel Music Style in Ibadan, Nigeria”, 2019. University of Ibadan.
-
-Ossaiga, Udoka P. Music Minister, Baptist Church, Ugbori-Warri.
+- Ossaiga, Udoka P. Music Minister, Baptist Church, Ugbori-Warri.
 Theses: “Conducting Practices of Selected Formally Trained Choral Conductors in Southern Nigeria as Demonstrated in a Concert”, 2019. Delta State University, Abraka.
-
-Olorunsogo, Adetutu. Federal College of Education, Osiele Ogun State.
+- Olorunsogo, Adetutu. Federal College of Education, Osiele Ogun State.
 Theses: “Contemporary Song Repertoire of Children: A Study of Selected Schools in Ogun State”, 2019. University of Lagos.
-
-Ogunrinade, David. (affiliation unknown)
+- Ogunrinade, David. (affiliation unknown)
 Theses: “Assessment of Curriculum Implementation in Selected Secondary Schools in Lagos State”, 2019. University of Lagos, Nigeria.
-
-Modeme, Eyiuche R. University of Port Harcourt.
+- Modeme, Eyiuche R. University of Port Harcourt.
 Theses: “Contesting the Extremes of Digital Divide between Music Teachers and Students in Selected Secondary Schools in Anambra State, Nigeria”, 2019. University of Nigeria, Nsukka.
-
-Akalazu, Geoffrey C. Nnamdi Azikiwe University, Awka.
+- Akalazu, Geoffrey C. Nnamdi Azikiwe University, Awka.
 Theses: “Impact of Church Music on Students’ Achievement in Music among Selected Secondary Schools in Enugu”, 2019. Nnamdi Azikiwe University, Awka.
-
-Falusi, Jacob O. (affiliation unknown) “Implementation of Music Education Curriculum in Deeper Christian Life Ministry’s Schools in South-West Zone, Nigeria”, 2019. Nnamdi Azikiwe University, Awka.
-
-Nnam, Glory N. Joint Admissions Matriculations Board
+- Falusi, Jacob O. (affiliation unknown) “Implementation of Music Education Curriculum in Deeper Christian Life Ministry’s Schools in South-West Zone, Nigeria”, 2019. Nnamdi Azikiwe University, Awka.
+- Nnam, Glory N. Joint Admissions Matriculations Board
 Theses: “Panacea for Music Education in Nigeria: A Case Study of Senior Secondary Schools in Enugu State”, 2019. Nnamdi Azikiwe University, Awka.
-
-Okpararuekwe, Peace I. (affiliation unknown)
+- Okpararuekwe, Peace I. (affiliation unknown)
 Theses: “Applying Collaborative Learning Techniques of Agbani Music to Ensemble Studies in Creative Arts Department, Federal College of Education, Zaria”, 2019. Nnamdi Azikiwe University, Awka.
-
-Omotosho, Mary T. Obafemi Awolowo University, Ile-Ife.
+- Omotosho, Mary T. Obafemi Awolowo University, Ile-Ife.
 Theses: “A Study of the Compositional Techniques in Hubert Ogunde’s Theatrical Music”, 2019. Obafemi Awolowo University, Ile- Ife.
-
-Ibidun, Reuben O. Federal College of Education, Okene.
+- Ibidun, Reuben O. Federal College of Education, Okene.
 Theses: “A Study of the State of Universal Basic Music Education in Kogi State, Nigeria”, 2019. University of Nigeria, Nsukka.
-
-Adeolu, Abe. Adeyemi College of Education, Ondo.
+- Adeolu, Abe. Adeyemi College of Education, Ondo.
 Theses: “Musical Study of Some Operas by Professionally Trained Nigerian Composers”, 2020. Obafemi Awolowo University, Ile- Ife.
-
-Ajose, Samuel T. Department of Music, University of Ibadan.
+- Ajose, Samuel T. Department of Music, University of Ibadan.
 Theses: “Dynamics of Musico-Cultural Engagements in Selected Prayer Mountains in Osun State, Nigeria”, 2020. University of Ibadan.
-
-Ekpo, Omotolani E. Federal University, Wukari.
+- Ekpo, Omotolani E. Federal University, Wukari.
 Theses: “Keku, a Contemporary Symphony Based on Jukun Traditional Dance.” 2020. University of Nigeria, Nsukka.
-
-Igwe, Victor O. Ignatius Ajuru University of Education, Port Harcourt.
+- Igwe, Victor O. Ignatius Ajuru University of Education, Port Harcourt.
 Theses: “Enhancing Music Graduates’ Employability for Nation Building in Rivers State of Nigeria”, 2020. Ignatius Ajuru University of Education, Port Harcourt.
-
-Ukor, Victor M. MTN, Port Harcourt, Nigeria.
+- Ukor, Victor M. MTN, Port Harcourt, Nigeria.
 Theses: “Comparative Analysis of Undergraduate Curriculum C ontent and Strategy towards Industry Relevance in South-South Nigeria”, 2020. Ignatius Ajuru University of Education, Port Harcourt.
-
-Amole, Blessing A. Alvan Ikokwu Federal College of Education, Owerri, Imo State.
+- Amole, Blessing A. Alvan Ikokwu Federal College of Education, Owerri, Imo State.
 Theses: “Igala Music in Oyoland: A Case study of its metaphysics and Performance Practices”, 2020. Ignatius Ajuru University of Education, Port Harcourt.
-
-Esemudje, Andrew A. Rivers State Baptist Convention, Port Harcourt.
+- Esemudje, Andrew A. Rivers State Baptist Convention, Port Harcourt.
 Theses: “Indigenous Musical Instruments in Ikwereland, Rivers State of Nigeria: Socio-Cultural Beliefs, Utility and Gender Discourses”, 2020. Ignatius Ajuru University of Education, Port Harcourt.
-
-Abugu, Peace T. University of Delta, Agbor.
+- Abugu, Peace T. University of Delta, Agbor.
 Theses: “Continuity, Change and Adaptation of Udje Musical Ensemble and Tradition among the Urhobo, Delta State”, 2020. University of Ibadan.
-
-Adedayo, Ezekiel B. (affiliation unknown)
+- Adedayo, Ezekiel B. (affiliation unknown)
 Theses: “Yoruba Islamised Gospel Music”, 2021. University of Ibadan.
-
-Soretire, Eyitayo Aderonke. Federal College of Education, Abeokuta
+- Soretire, Eyitayo Aderonke. Federal College of Education, Abeokuta
 Theses: “Investigating Choristers’ Needs for Effective Transfer of Musical Knowledge among Mainline and Pentecostal Christian Churches in Abeokuta, Ogun State, Nigeria”, 2021. University of Nigeria, Nsukka.
-
-Famakinde, Tolulope T. West African Examination Council.
+- Famakinde, Tolulope T. West African Examination Council.
 Theses: “The Social Cultural Context of Festival Music Performance of Igede Ekiti, Ekiti State of Nigeria”, 2021. Ignatius Ajuru University of Education, Port Harcourt.
-
-Dada, Olatunji. University of Ibadan.
+- Dada, Olatunji. University of Ibadan.
 Theses: “The Standard Pattern Rhythm in Selected Naija Hip Hop Music”, 2021. University of Lagos.
-
-Udok, Ekaette C. University of Uyo, Akwa-Ibom State.
+- Udok, Ekaette C. University of Uyo, Akwa-Ibom State.
 Theses: ”Ibibio Women’s Music Culture: Past and Present”, 2021. Nnamdi Azikiwe University, Awka.
-
-Umeojiaka, David S. Nnamdi Azikiwe University, Awka.
+- Umeojiaka, David S. Nnamdi Azikiwe University, Awka.
 Theses: “Impact of E-Learning in Academic Performance of Students in Music: A Case Study of Selected Students of Four Universities in South- East Nigeria”, 2021. Nnamdi Azikiwe University, Awka.
-
-Okunbor, Dora. University of Delta, Agbor.
+- Okunbor, Dora. University of Delta, Agbor.
 Theses: “Investigation of Students’ Gender in Relation to the Study Music”, 2021. Delta State University, Abraka.
-
-Okpala, Hope Nkechi. Odumego Ojukwu University, Igbariam.
+- Okpala, Hope Nkechi. Odumego Ojukwu University, Igbariam.
 Theses: “Dance Music in Igbo Culture: A Study of Iduu Cultural Dance of Akpo and Odezuruigbo Cultural Dance of Awka”, 2021. Nnamdi Azikiwe University, Awka.
-
-Ezebube, Augustina C. Ignatius Ajuru University, Port Harcourt.
+- Ezebube, Augustina C. Ignatius Ajuru University, Port Harcourt.
 Theses: “Social and Educative Roles of Bari Bii and Kanulele Music Groups of Ogoni, Rivers State”, 2021. Nnamdi Azikiwe University, Awka.
-
-Ogunsanya, Adeolu Olowofela. University of Ibadan.
+- Ogunsanya, Adeolu Olowofela. University of Ibadan.
 Theses: “Musical Motifs in the Dramatic Works of Wole Soyinka and Femi Osofisan”, 2021. University of Ibadan.
-
-Jayeola, David. Alex Ekwueme Federal University, Ndufu-Alike, Abakaliki, Ebonyi State.
+- Jayeola, David. Alex Ekwueme Federal University, Ndufu-Alike, Abakaliki, Ebonyi State.
 Theses: “Performance Styles and Roles of Nkwa Umuagbogho Music and Dance in South East Nigeria”, 2021. Delta State University, Abraka.
-
-Madu, F. N. University of Delta, Agbor.  
+- Madu, F. N. University of Delta, Agbor.  
 Theses: “Computer Applications in Music Pedagogy: A Study of its Use in Tertiary Institutions in Delta and Edo States, Nigeria”, 2021. Nnamdi Azikiwe University, Awka.
+
+</div>
 
 ____
 
