--- a/issue8/article02/2023-02-24-art.mdx
+++ b/issue8/article02/2023-02-24-art.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Musico-Metaphor: ​The  Man In The Long Black Coat'
+title: '#2 Musico-Metaphor: ​The  Man In The Long Black Coat'
 description: 'The use of figurative speech in a language is often a conscious action that a speaker uses for several reasons, but most importantly to have a desired effect on the sensibility of the listener.'
 slug: the-man-in-the-long-black-coat
 authors: [ealemede, gbenga, adetayo]
@@ -7,7 +7,7 @@ tags: [language, music, metaphor, listeners, artistic freedom, song, meaning]
 date: 2023-02-24
 ---
 
-# Musico-Metaphor: ​The Man In The Long Black Coat
+# #2 Musico-Metaphor: ​The Man In The Long Black Coat
 
 {/* truncate */}
 
@@ -22,14 +22,14 @@ Reviewed: Jan 15, 2023
 Accepted: Jan 26, 2023
 ```
 
-# Musico-Metaphor: ​The Man In The Long Black Coat
+# #2 Musico-Metaphor: ​The Man In The Long Black Coat
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -232,15 +232,18 @@ Oh Lord
 
 </div>
 
+<div className='figureBox'>
+
 <iframe
-	width='560'
-	height='315'
+	width={560}
+	height={315}
 	src='https://www.youtube.com/embed/OYp9G7AfvbE?si=4dE_5koPX5e2L8wK'
 	title='YouTube video player'
-	frameborder='0'
-	allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
-	referrerpolicy='strict-origin-when-cross-origin'
-></iframe>
+	allow='encrypted-media;'
+	referrerPolicy='strict-origin-when-cross-origin'
+/>
+
+</div>
 
 ---
 
