--- a/issue8/article03/2023-02-23-art.mdx
+++ b/issue8/article03/2023-02-23-art.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales'
+title: '#3 Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales'
 description: 'Folktales constitute one of the oldest traditional forms of education based on the method of delivery through oral tradition. Among the Yorùbá, folktale is a viable medium for transmission of cultural values ...'
 slug: aesthetics-of-selected-yoruba-folktales
 authors: [omolaye]
@@ -15,7 +15,7 @@ tags:
   ]
 ---
 
-# Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales
+# #3 Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales
 
 {/* truncate */}
 
@@ -31,11 +31,11 @@ Accepted: Dec 25, 2022
 
 ```
 
-# Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales
+# #3 Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
 			{email}
@@ -189,7 +189,7 @@ Response: Alugbinrin
 </div>
 
 <div className='figureBox'>
-	<figure>
+	<figure className='score'>
 		<img
 			src={require('@site/issue8/article03/omolaye-example_orig.png').default}
 			alt='Example 1. Ìjàpá àti Babaláwo Tortoise and The Herbalist'
@@ -199,6 +199,7 @@ Response: Alugbinrin
 		</figcaption>
 	</figure>
 </div>
+
 
 After listening to the tortoise’s plea through his song, the herbalist had compassion and forgave his attitude of theft and greediness by giving him another concoction and also healed his swollen stomach. The herbalist later gave him another concoction to take home for his wife to eat. As we know, attitude can never be hidden. Again, the tortoise tested the taste, and his stomach became swollen the second time. The tortoise was afraid again and went back to the herbalist, repeating the same song in the Example 1.
 
@@ -316,7 +317,7 @@ Response: Èrèkú e we le
 </div>
 
 <div className='figureBox'>
-	<figure>
+	<figure className='score'>
 		<img
 			src={require('@site/issue8/article03/omolaye-example4.png').default}
 			alt='Example 4. Ìjàpá àti Erin Tortoise and Elephant'
@@ -375,7 +376,7 @@ Almost all human endeavours in today’s context are being digitised to meet the
 
 ​This study, therefore, recommends that African folktales, being one of the mediums where indigenous wisdom and moral values are passed and transmitted be revitalised and digitalised, so that the practice will continue to impact positively to the younger generation. In addition, once adequate attention is given to this African cultural practice, it is certain that the residue of knowledge passed on to children through African folktales would be preserved from possible extinction.
 
-<div className='figureBox'>
+<div className='figureBox wide'>
 	<table>
 		<caption>**_Table 1._** Oral Interviews: Names of Informant and their Locations</caption>
 	<thead>
