--- a/issue8/article04/2023-02-22.mdx
+++ b/issue8/article04/2023-02-22.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Folk Songs as an Agent of Cultural Transmission, ​Teaching and Learning for a Yoruba Child'
+title: '#4 Folk Songs as an Agent of Cultural Transmission, ​Teaching and Learning for a Yoruba Child'
 description: 'This study explores the origin, as well as the development and changes that might have occurred in the folk music in the course of time, and to transcribe African music materials into educational materials for school use.'
 slug: yoruba-folk-songs-teaching-and-learning
 authors: [ayoola]
 tags: [folk songs, transmission, culture, teaching and learning]
 ---
 
-# Folk Songs as an Agent of Cultural Transmission, ​Teaching and Learning for a Yoruba Child
+# #4 Folk Songs as an Agent of Cultural Transmission, ​Teaching and Learning for a Yoruba Child
 
 {/* truncate */}
 
@@ -22,14 +22,14 @@ Accepted: Jan 20, 2023
 
 ```
 
-# Folk Songs as an Agent of Cultural Transmission, ​Teaching and Learning for a Yoruba Child
+# #4 Folk Songs as an Agent of Cultural Transmission, ​Teaching and Learning for a Yoruba Child
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -196,19 +196,7 @@ The cry for our cultural identity and the attempt to give Nigerian music educati
 
 #### ​Omo to Mo Iya re loju
 
-_​(The child that disobeys his or her mother)_
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue8/article04/ayoola-example1.png').default}
-			alt='Example 1. Omo to Mo Iya re loju (source: author)'
-		/>
-		<figcaption>
-			**_Example 1._** Omo to Mo Iya re loju (source: author)
-		</figcaption>
-	</figure>
-</div>
+​(_The child that disobeys his or her mother_)
 
 <div className='poetry'>
 
@@ -228,23 +216,24 @@ The child that disobeys his/her mother will be poor
 
 </div>
 
-#### Iya ni Wura
-
-_(A Mother is Precious)_
-
-The song speaks volume of how precious a mother is to a child. The pains of a mother, who went through the period of pregnancy, delivery, and then raising of the child, when the mother took care of the child. This affirms that a mother has done so much for the survival of a child.
-
 <div className='figureBox'>
 	<figure>
 		<img
-			src={require('@site/issue8/article04/ayoola-example2.png').default}
-			alt='Example 2. Iya ni Wura (A Mother is Precious) (source: author)'
+			src={require('@site/issue8/article04/ayoola-example1.png').default}
+			alt='Example 1. Omo to Mo Iya re loju (source: author)'
 		/>
 		<figcaption>
-			**_Example 2._** Iya ni Wura (A Mother is Precious) (source: author)
+			**_Example 1._** Omo to Mo Iya re loju (source: author)
 		</figcaption>
 	</figure>
 </div>
+
+
+#### Iya ni Wura 
+
+(_A Mother is Precious_)
+
+The song speaks volume of how precious a mother is to a child. The pains of a mother, who went through the period of pregnancy, delivery, and then raising of the child, when the mother took care of the child. This affirms that a mother has done so much for the survival of a child.
 
 <div className='poetry'>
 
@@ -264,21 +253,25 @@ Mother is a precious gold that money cannot buy.]
 
 </div>
 
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue8/article04/ayoola-example2.png').default}
+			alt='Example 2. Iya ni Wura (A Mother is Precious) (source: author)'
+		/>
+		<figcaption>
+			**_Example 2._** Iya ni Wura (A Mother is Precious) (source: author)
+		</figcaption>
+	</figure>
+</div>
+
+
+
 ### Folklores
 
 Folklores are songs which Yoruba uses to educate the people in the cultural values and ideals of society. The intended values are taught through stories presented as folktales. The storyteller, often the one older than the audience, teaches related songs that are easy to learn by the listeners. The songs are represented below.
 
 #### Oluronbi
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue8/article04/ayoola-example3.png').default}
-			alt='Example 3. Oluronbi (source: author)'
-		/>
-		<figcaption>**_Example 3._** Oluronbi (source: author)</figcaption>
-	</figure>
-</div>
 
 <div className='poetry'>
 
@@ -303,17 +296,19 @@ a fair- complexioned, handsome youth,
 
 </div>
 
-#### Babalawo mo wa bebe
-
 <div className='figureBox'>
 	<figure>
 		<img
-			src={require('@site/issue8/article04/ayoola-example4.png').default}
-			alt='Example 4. Babalawo (source: author)'
+			src={require('@site/issue8/article04/ayoola-example3.png').default}
+			alt='Example 3. Oluronbi (source: author)'
 		/>
-		<figcaption>**_Example 4._** Babalawo (source: author)</figcaption>
+		<figcaption>**_Example 3._** Oluronbi (source: author)</figcaption>
 	</figure>
 </div>
+
+
+
+#### Babalawo mo wa bebe
 
 <div className='poetry'>
 
@@ -340,17 +335,19 @@ Response: Alugbinrin
 
 </div>
 
-#### Game Song (Eye Meta)
-
 <div className='figureBox'>
 	<figure>
 		<img
-			src={require('@site/issue8/article04/ayoola-example5.png').default}
-			alt='Example 5. Eye Meta (source: author)'
+			src={require('@site/issue8/article04/ayoola-example4.png').default}
+			alt='Example 4. Babalawo (source: author)'
 		/>
-		<figcaption>**_Example 5._** Eye Meta (source: author)</figcaption>
+		<figcaption>**_Example 4._** Babalawo (source: author)</figcaption>
 	</figure>
 </div>
+
+
+
+#### Game Song (Eye Meta)
 
 <div className='poetry'>
 
@@ -377,17 +374,18 @@ The third one has a long tail.
 
 </div>
 
-#### Lullaby (Omo Mi )
-
 <div className='figureBox'>
 	<figure>
 		<img
 			src={require('@site/issue8/article04/ayoola-example5.png').default}
-			alt='Example 6. Omo Mi (source: author)'
+			alt='Example 5. Eye Meta (source: author)'
 		/>
-		<figcaption>**_Example 6._** Omo Mi (source: author)</figcaption>
+		<figcaption>**_Example 5._** Eye Meta (source: author)</figcaption>
 	</figure>
 </div>
+
+
+#### Lullaby (Omo Mi)
 
 <div className='poetry'>
 
@@ -411,6 +409,18 @@ Oh, short as grass.]
 ```
 
 </div>
+
+<div className='figureBox'>
+	<figure>
+		<img
+			src={require('@site/issue8/article04/ayoola-example5.png').default}
+			alt='Example 6. Omo Mi (source: author)'
+		/>
+		<figcaption>**_Example 6._** Omo Mi (source: author)</figcaption>
+	</figure>
+</div>
+
+
 
 ---
 
