--- a/issue8/article05/2023-02-21-art.mdx
+++ b/issue8/article05/2023-02-21-art.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Soundscape on Aparo (Partridge) and its ​Eco Proverbial Implications in Yoruba Worldview'
+title: '#5 Soundscape on Aparo (Partridge) and its ​Eco Proverbial Implications in Yoruba Worldview'
 description: 'Soundscape exists through the human impression of the ecological environment. Among the Yoruba people of southwestern Nigeria, these impressions are expressed in proverbs that are applicable in two major ways: speech and music.'
 slug: soundscape-on-aparo
 authors: [adekogbe]
@@ -16,7 +16,7 @@ tags:
   ]
 ---
 
-# Soundscape on “Àparò"(Partridge) and its ​Eco Proverbial Implications in Yoruba Worldview
+# #5 Soundscape on “Àparò"(Partridge) and its ​Eco Proverbial Implications in Yoruba Worldview
 
 {/* truncate */}
 
@@ -33,14 +33,14 @@ Accepted: Dec 12, 2022
 
 ```
 
-# Soundscape on “Àparò"(Partridge) and its ​Eco Proverbial Implications in Yoruba Worldview
+# #5 Soundscape on “Àparò"(Partridge) and its ​Eco Proverbial Implications in Yoruba Worldview
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -109,7 +109,7 @@ The field of ecomusicology engages the physical environment through the culture 
 
 Defining the relevance of this paper in ecomusicological studies, it is therefore considered as a channel to examine the relationship of birds and humans with the environment, the interactions of the three elements in the advancement of an ideal ecological relationship that is fathomed though musical creativity for correctional and appraisal purposes in the Yoruba etymology. Coiling from Allen (2014) who defines ecomusicology as, “the study of music, culture, and nature in all the complexities of those terms.” This posits that ecomusicology thinks about music and sonic issues that are analyzed in text and performance as connected with ecology and the human environment. Therefore, ecomusicology as a study of music and nature attempts to bridge the challenges of music and ecology autonomy and presents a connection to advance and strengthen the power of music and the value of environment within a particular cultural ambience.
 
-​Shirley (Shirley at al. 2018) see ecomusicology study as “a connection between humans and nature which the subject of numerous areas of research and a collective attempt to answer question of what truly makes us human as well as define how human society will conserve and coexist with nature in the future.” Titon (2009) views ecomusicology as a research area for sustainability. In his paper “Music and Sustainability: An Ecological Viewpoint”, he posits that
+​Shirley (Shirley at al. 2018) see ecomusicology study as “a connection between humans and nature which the subject of numerous areas of research and a collective attempt to answer question of what truly makes us human as well as define how human society will conserve and coexist with nature in the future.” Titon (2009) views ecomusicology as a research area for sustainability. In his paper “Music and Sustainability: An Ecological Viewpoint”, he posits that:
 
 > ecomusicology teaches adaptational advantage of diversity. In the competition for resources, the more diverse the organisms, populations, and communities, the greater the chances of survival in, and of, the ecosystem. Thus the argument in favor of diversity is not merely grounded injustice as fairness, but also in adaptation for survival”. (p.120 )
 
@@ -117,7 +117,7 @@ Buttressing Titon’s position, Brewer (1994) opines that “the community and i
 
 ## ​The Theoretical Framework
 
-​The theoretical approach was advanced by Yankah (1989). The theory investigates adages in light of relevant points of view. Investigating the idea of the perception and elucidation that talking about the maxims and distinguishing its significance without response to setting, prompts overview of the usefulness of the axiom as a significant piece of the talk (Yankah 1989). Yankah states that
+​The theoretical approach was advanced by Yankah (1989). The theory investigates adages in light of relevant points of view. Investigating the idea of the perception and elucidation that talking about the maxims and distinguishing its significance without response to setting, prompts overview of the usefulness of the axiom as a significant piece of the talk (Yankah 1989). Yankah states that:
 
 > The context of the proverb is crucial in navigating their content. Moreover, proverbs, due to their dynamic nature, have the potential for varied meanings. Context, therefore, helps to identify the intended meaning in a given situation. It should be noted that context in this sense includes not only the social environment in which proverbs are used, but also the social credentials of speakers and audience, and the more immediate situation of use. (p.71).
 
