--- a/issue8/article06/2023-02-20-art.mdx
+++ b/issue8/article06/2023-02-20-art.mdx
@@ -1,5 +1,5 @@
 ---
-title: '​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria'
+title: '#6 ​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria'
 slug: musical-sound-advocacy-nigeria
 description: '​In many world cultures, the place of music cannot be underestimated. Music has been used in diverse ways to correct, build, inform and educate people in all communities. Nigeria, as a nation, is not left out of these practices...'
 authors: [adekogbe]
@@ -13,7 +13,7 @@ tags:
   ]
 ---
 
-# ​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria
+# #6 ​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria
 
 {/* truncate */}
 
@@ -29,14 +29,14 @@ Accepted: Dec 05, 2022
 
 ```
 
-# ​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria
+# #6 ​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -117,7 +117,7 @@ Popular music by conceptual definition, is a generally acceptable musical type o
 
 ## Behavioral Theory of leadership and the Application of Musical Sound Advocacies
 
-​Behavioral theory of leadership by Rensis Likert (1938) contends that the achievements of a leader depend on behavioral responses to issues rather than inactiveness. Behavioral leadership theory includes noticing and assessing a leader’s actions and reactions to national pressing issues in a specific situation. This theory adopts that leaders are made and not conceived. Advocates of this theory recommend that anybody can turn into a good leader if he or she can conceive and implement specific ways of behavior. There are several instances where music has been used to correct and reshape human behaviors, especially in the melodic expressions “which are used for transforming ordinary experience into deeper personal/collective responsibilities” (Njoora 2015, 27). Also, Francis (2008) argues that
+​Behavioral theory of leadership by Rensis Likert (1938) contends that the achievements of a leader depend on behavioral responses to issues rather than inactiveness. Behavioral leadership theory includes noticing and assessing a leader’s actions and reactions to national pressing issues in a specific situation. This theory adopts that leaders are made and not conceived. Advocates of this theory recommend that anybody can turn into a good leader if he or she can conceive and implement specific ways of behavior. There are several instances where music has been used to correct and reshape human behaviors, especially in the melodic expressions “which are used for transforming ordinary experience into deeper personal/collective responsibilities” (Njoora 2015, 27). Also, Francis (2008) argues that:
 
 > Music is a very powerful medium and in some societies there have been attempts to control its use. It is powerful at the level of the social group because it facilitates communication which goes beyond words, enables meanings to be shared, and promotes the development and maintenance of individual, group, cultural and national identities. It is powerful at the individual level because it can induce multiple responses – physiological, movement, mood, emotional, cognitive and behavioral. Few other stimuli have effects on such a wide range of human functions. The brain’s multiple processing of music can make it difficult to predict the particular effects of any piece of music on any individual.” (ibid, 4.)
 
@@ -131,7 +131,7 @@ There is other allegorical exposition of definitions of an institution, these in
 
 ## Nigerian Government as an Institution
 
-Nigeria is a federal republic, with the executive power by the president. Nigeria's decision-making body is the legislative arms of the lower and upper chambers which operate within the scope of the Nigerian Constitution of 1999 with Amendment through 2011 (www.contituteproject.org), this gives the executive power to the President of the nation. The lawmaking body is the main establishment of administration in the Nigerian democratic based nation as it intercedes and deals with the premium of two significant classes of people governing, including legislators and executive and non-governing including electorate and elites. Commenting on this, Ambily, Philips and Timipa (2015) write that
+Nigeria is a federal republic, with the executive power by the president. Nigeria's decision-making body is the legislative arms of the lower and upper chambers which operate within the scope of the Nigerian Constitution of 1999 with Amendment through 2011 (www.contituteproject.org), this gives the executive power to the President of the nation. The lawmaking body is the main establishment of administration in the Nigerian democratic based nation as it intercedes and deals with the premium of two significant classes of people governing, including legislators and executive and non-governing including electorate and elites. Commenting on this, Ambily, Philips and Timipa (2015) write that:
 
 > the national assemblies have committees and subcommittees that are assigned specific responsibilities. By their contributions in committees, members play a more significant role in the formulation and consolidation of public policy than they do in open debates on the floor of the house.” (ibid., 21)
 
@@ -248,7 +248,7 @@ Edrees Abdu Kareem “Nigeria Jàgà Jágá” is a direct musical pressure 
 			alt='Figure 1. MFigure 3: Picture of children jubilating at the power restoration in Maiduguri, Borno State'
 		/>
 		<figcaption>
-			**Figure 1._** Picture of children jubilating at the power restoration in
+			**Figure 1.** Picture of children jubilating at the power restoration in
 			Maiduguri, [Borno
 			State](https://www.legit.ng/1408837-up-nepa-children-jubilate-loudly-street-electricity-restored-maiduguri-56-days.html)
 		</figcaption>
@@ -273,7 +273,7 @@ Gbosa, gbosa, gunshot inna de air (And gunshot everywhere)
 
 The above lyrics are the excerpt from Edrees Abdul Kareem song (2004), titled “Nigeria Jàgà Jágá". This version of the song is seemingly one of the real musical advocacy and truth about the Nigerian nation. It passes on our dispersed political reality as well as similarly, the death of reason in our present political construction and culture. Edrees' Jàgà Jágá resound the demise of initiative, the franticness of force and the powerful construction between the pioneers and adherents. Jàgà Jágá, according to Tribune Newspaper Online (April 12, 2004) was once denounced and banned from all public performances and the media by President Olusegun Obasanjo on the basis that "how can anyone call his own country ‘Jàgà Jágá’?".
 
-In fact, Nigeria is in a state of political wreck and an appalling position of _Jàgà Jágá_. According to Ologundudu (2015, 32), “it could be difficult to concede yet except if we live in cloud cuckoo; the Nigerian situation has become a tragic state”. In any case, the nation has got close to a harbinger of disaster and passing. Each time one thinks about the truth ground it is like: salt is added to a destructive mixture made for supper with a taste of harshness and unfathomableness. Example 4 is the musical score of _Jàgà Jágá_.
+In fact, Nigeria is in a state of political wreck and an appalling position of _Jàgà Jágá_. According to Ologundudu (2015, 32), “it could be difficult to concede yet except if we live in cloud cuckoo; the Nigerian situation has become a tragic state”. In any case, the nation has got close to a harbinger of disaster and passing. Each time one thinks about the truth ground it is like: salt is added to a destructive mixture made for supper with a taste of harshness and unfathomableness. _Example 4_ is the musical score of _Jàgà Jágá_.
 
 <div className='figureBox'>
 	<figure>
@@ -305,7 +305,7 @@ Ka luku lo nkigbe owo [Everyone is lamenting for lack of money]
 
 </div>
 
-The above lyric has expressed the generational situation of the Nigerian government institution; it should be recalled that Victor Olaiya released this song in 1983 by Polydor (Lagos) yet, the economic status in Nigeria has not improved a dint, rather getting worse. As though the present status of insecurity, corruption, ineptitude, kidnapping, bomb impact, disarray, pressure and destitution are sufficiently not, the Minister of Finance has just cautioned of a looming economic downturn in Nigeria in the coming moment and with a blend of all the hopelessness and the recession when it begins, one thinks about what will happen to the country in the coming years if the economic situation fails to improve. Nigeria's newly developed culture of reckless borrowing and spending are answerable for our wrong economic and political progressiveness, responsible for our troubles and our absence of monetary advancement and improvement. A lot of accentuation on lost qualities, instruction, realism and cash force has served us no better. It is the dug in culture in each Nigerian institution and the standard in most open organizations and among our friends and relatives. The new culture is not just fashioned upon us by the clouded side of globalization, however by the terrible many years of neediness, the death of administration and numerous long years of gloomy orientations. Example 5 is the musical score of Ilu-Le by Victor Olaiya.
+The above lyric has expressed the generational situation of the Nigerian government institution; it should be recalled that Victor Olaiya released this song in 1983 by Polydor (Lagos) yet, the economic status in Nigeria has not improved a dint, rather getting worse. As though the present status of insecurity, corruption, ineptitude, kidnapping, bomb impact, disarray, pressure and destitution are sufficiently not, the Minister of Finance has just cautioned of a looming economic downturn in Nigeria in the coming moment and with a blend of all the hopelessness and the recession when it begins, one thinks about what will happen to the country in the coming years if the economic situation fails to improve. Nigeria's newly developed culture of reckless borrowing and spending are answerable for our wrong economic and political progressiveness, responsible for our troubles and our absence of monetary advancement and improvement. A lot of accentuation on lost qualities, instruction, realism and cash force has served us no better. It is the dug in culture in each Nigerian institution and the standard in most open organizations and among our friends and relatives. The new culture is not just fashioned upon us by the clouded side of globalization, however by the terrible many years of neediness, the death of administration and numerous long years of gloomy orientations. _Example 5_ is the musical score of Ilu-Le by Victor Olaiya.
 
 <div className='figureBox'>
 	<figure>
@@ -322,7 +322,7 @@ The above lyric has expressed the generational situation of the Nigerian governm
 
 ### Musical Advocacy on National Insecurity: “Nigeria Under Pressure”
 
-​The faith of Nigeria and Nigerians in the present national insecurity is a global concern. This concern has been expressed and addressed through diverse channels of schools of thought in literature, artistic paintings, dramas, dance, and popular musicians are not left out in this national advocacy for a secured Nigerian nation. In this connection, late Ras Kimono, a veteran Nigeria popular reggae musician, has severally called on the government of Nigeria to address the pressured national insecurity being perpetuated by Boko Haram, Fulani Herdsmen and kidnappers. Kimono in his song “Under pressure” (see Example 6) laments on how Nigerians are faced with incessant killings through Boko Haram insurgency and the Fulani herdsmen invasion of farmlands and villages, kidnappings of school children and teachers alike. This has turned many Nigerians to destitute with no food to eat, no home to stay and no money to spend. The wailings of many Nigerians under a serious and undefinable pressure have become concerns for Kimono, hence the release of his musical album “Nigeria Under Pressure.” Yet, the problem of insecurity still persists till date. The song lyrics express this further as stated below (interpretation is in the brackets):
+​The faith of Nigeria and Nigerians in the present national insecurity is a global concern. This concern has been expressed and addressed through diverse channels of schools of thought in literature, artistic paintings, dramas, dance, and popular musicians are not left out in this national advocacy for a secured Nigerian nation. In this connection, late Ras Kimono, a veteran Nigeria popular reggae musician, has severally called on the government of Nigeria to address the pressured national insecurity being perpetuated by Boko Haram, Fulani Herdsmen and kidnappers. Kimono in his song “Under pressure” (see _Example 6_) laments on how Nigerians are faced with incessant killings through Boko Haram insurgency and the Fulani herdsmen invasion of farmlands and villages, kidnappings of school children and teachers alike. This has turned many Nigerians to destitute with no food to eat, no home to stay and no money to spend. The wailings of many Nigerians under a serious and undefinable pressure have become concerns for Kimono, hence the release of his musical album “Nigeria Under Pressure.” Yet, the problem of insecurity still persists till date. The song lyrics express this further as stated below (interpretation is in the brackets):
 
 <div className='poetry'>
 
@@ -402,7 +402,7 @@ Let's save Nigeria so Nigeria won’t fall
 
 </div>
 
-Okosun ends the music (see Example 7) with a plagal cadence of “Amen” which represents a sense of perfection in a musical sentence. An institution is a system of norms to achieve some goals or activities that are considered beneficial to the people and more centered on a major human activity. Okosun's position is a confirmation of a digression of the Nigerian institution from the normal processes of what should be called an institution as a result, all institutions in Nigeria are suffering from a total decay.
+Okosun ends the music (see _Example 7_) with a plagal cadence of “Amen” which represents a sense of perfection in a musical sentence. An institution is a system of norms to achieve some goals or activities that are considered beneficial to the people and more centered on a major human activity. Okosun's position is a confirmation of a digression of the Nigerian institution from the normal processes of what should be called an institution as a result, all institutions in Nigeria are suffering from a total decay.
 
 <div className='figureBox'>
 	<figure>
@@ -436,17 +436,17 @@ The paper also examined the various organs of governmental institutions and the 
 <div className='references'>
 
 1. Akinrinade, S. 2016. “A society under pressure: thoughts on leadership, followership and the re-invention of the Nigerian state.” _Journal of the Historical Society of Nigeria. 25: 1-17._
-2. Ambily, E., O. O. Philips,I. and Timipa. 2015. "State and Government Institutions in Nigeria: A Study of Bayelsa State House of Assembly in the Fourth Republic 1999 – 2012." _IOSR Journal of Humanities and Social Science (IOSR-JHSS). Volume 20 (3): 17-31 e-ISSN: 2279-0837, p-ISSN: 2279-0845._
+2. Ambily, E., O. O. Philips,I. and Timipa. 2015. "State and Government Institutions in Nigeria: A Study of Bayelsa State House of Assembly in the Fourth Republic 1999 – 2012." _IOSR Journal of Humanities and Social Science (IOSR-JHSS). Volume 20(3): 17-31 e-ISSN: 2279-0837, p-ISSN: 2279-0845._
 3. Chukwumezie, N. 2010. “Corruption as an Endemic Problem in Nigeria.” In _Contemporary Social Issues,_ E.A. Obi and O.S.A. Obi Keze (eds.). Onitsha: Bakpoint.
 4. Dickson, H.S. 2013. "We are Changing the Face of Bayelsa ". _The News._ February 18:17.
 5. Francis, D. 2008. _Music Makes Our Lives Magical and Meaningful, General benefits of music education: Advocacy for music education._ Accessed (accessed Aug 27, 2022).
-6. Lionel, E. 2013. “The dynamic analysis of electricity supply and economic development: Lessons from Nigeria.“ J*o​urnal of Sustainable Society. 2 (1): 1-11.*
+6. Lionel, E. 2013. “The dynamic analysis of electricity supply and economic development: Lessons from Nigeria.“ J*o​urnal of Sustainable Society. 2(1): 1-11.*
 7. Merriam, A. 1964. _The Anthropology of Music._ Noyes St. Evanston, IL: Northwestern University Press.
 8. Merton, R.K. 1968. _Social Theories and Social Structure._ New York: Free Press.
 9. Njoora, T. 2015. “More than just good feelings: Advocacy for music among mainstream subjects.” _Muziki, Journal of Music Research in Africa. Vol. 12(1): 23–40._
 10. North, D. 1990. _Institutions, Institutional Change and Economic Performance (Political Economy of Institutions and Decisions)._ Cambridge: Cambridge University Press.
-11. Okolo, P. O. & Etekpe, A. 2011. “A study of Public Maintenance Culture and its Impacts on the Socio-Economic Development of Nigeria, 2005 -2009.” _International Journal of Development Studies. Vol. 3 (2): 29-46._ ISSN 2141-8713. Center for the Promotion of International Relations, Studies and Development, Kandid Gold, Accra Ghana.
-12. Ologundudu, M. M. 2015. “The Epileptic Nature of Electricity Supply and its Consequences on Industrial and Economic Performance in Nigeria.” _Global Journal of Researches in Engineering. 14 (4): 27-39._
+11. Okolo, P. O. & Etekpe, A. 2011. “A study of Public Maintenance Culture and its Impacts on the Socio-Economic Development of Nigeria, 2005 -2009.” _International Journal of Development Studies. Vol. 3(2): 29-46._ ISSN 2141-8713. Center for the Promotion of International Relations, Studies and Development, Kandid Gold, Accra Ghana.
+12. Ologundudu, M. M. 2015. “The Epileptic Nature of Electricity Supply and its Consequences on Industrial and Economic Performance in Nigeria.” _Global Journal of Researches in Engineering. 14(4): 27-39._
 13. Orren, K. and S. Skowronek. 1994. “Beyond the Iconography of order: Notes for a New Institutionalism.” In _The Dynamics of American Politics_, L.C. Dodd and C. Jillson (eds.) Boulder and Co: West view Press.
 14. Ovie-Ejumudo, K.B. 2013. “Gender Equality and Women Empowerment in Nigeria: The Desirability and Inevitability of a Pragmatic Approach.” _International Journal of Knowledge Sharing. Vol 3, No 4._
 15. Riggs, F. 1971. _Frontiers of Development Administration._ Durham, NC: Duke University Press.
