--- a/issue8/article07/2023-02-19-art.mdx
+++ b/issue8/article07/2023-02-19-art.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture'
+title: '#7 Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture'
 slug: towards-revitalisation-of-yoruba-folk-opera
 description: 'This research advocates for reviving Yoruba folk opera for preserving Yoruba culture. The study used the data obtained from one hundred audience who watched a folk opera, Oba Waja (The King is Dead), written by Duro Ladipo, and staged by students of Olabisi Onabanjo University, Ago Iwoye.'
 authors: [akande]
 tags: [revitalisation, Yoruba, Folk Opera, preservation of culture]
 ---
 
-# Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture
+# #7 Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture
 
 {/* truncate */}
 
@@ -22,14 +22,14 @@ Accepted: Jan 22, 2023
 
 ```
 
-# Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture
+# #7 Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -174,126 +174,562 @@ Also, Ayanfe, written by April Atinuke Koyejo, is an opera loosely based on Yoru
 ## Data Analysis and Discussion of Findings
 
 <div className='figureBox'>
-		<table>
+	<table>
 		<caption>Table 1. Gender</caption>
-			<thead>
-				<tr>
-					<th>Gender</th>
-					<th>Frequency</th>
-					<th>Percentage</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<th>Male</th>
-					<td>29</td>
-					<td>29%</td>
-				</tr>
-				<tr>
-					<th>Female</th>
-					<td>71</td>
-					<td>71%</td>
-				</tr>
-				<tr>
-					<th>Total</th>
-					<td>100</td>
-					<td>100%</td>
-				</tr>
-			</tbody>
-		</table>
+		<thead>
+			<tr>
+				<th>Gender</th>
+				<th>Frequency</th>
+				<th>Percentage</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>Male</th>
+				<td>29</td>
+				<td>29%</td>
+			</tr>
+			<tr>
+				<th>Female</th>
+				<td>71</td>
+				<td>71%</td>
+			</tr>
+			<tr>
+				<th>Total</th>
+				<td>100</td>
+				<td>100%</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 
 ​In the above table, the frequency and percentage distribution of the respondents’ gender is outlined. Of the one hundred respondents, twenty more representing twenty-nine percent were males. While the remaining seventy-one representing seventy-one percent were females.
 
 <div className='figureBox'>
-		<table>
+	<table>
 		<caption>Table 2. Statistics on educational status</caption>
-			<thead>
-				<tr>
-					<th>Educational Status</th>
-					<th>Frequency</th>
-					<th>Percentage</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<th>PhD</th>
-					<td>20</td>
-					<td>20%</td>
-				</tr>
-				<tr>
-					<th>MA/MSC</th>
-					<td>14</td>
-					<td>14%</td>
-				</tr>
-				<tr>
-					<th>BA/BSC</th>
-					<td>12</td>
-					<td>12%</td>
-				</tr>
-				<tr>
-					<th>Undergraduate</th>
-					<td>50</td>
-					<td>50%</td>
-				</tr>
-				<tr>
-					<th>Others</th>
-					<td>4</td>
-					<td>4%</td>
-				</tr>
-				<tr>
-					<th>Total</th>
-					<td>100</td>
-					<td>100%</td>
-				</tr>
-			</tbody>
-		</table>
-		
+		<thead>
+			<tr>
+				<th>Educational Status</th>
+				<th>Frequency</th>
+				<th>Percentage</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>PhD</th>
+				<td>20</td>
+				<td>20%</td>
+			</tr>
+			<tr>
+				<th>MA/MSC</th>
+				<td>14</td>
+				<td>14%</td>
+			</tr>
+			<tr>
+				<th>BA/BSC</th>
+				<td>12</td>
+				<td>12%</td>
+			</tr>
+			<tr>
+				<th>Undergraduate</th>
+				<td>50</td>
+				<td>50%</td>
+			</tr>
+			<tr>
+				<th>Others</th>
+				<td>4</td>
+				<td>4%</td>
+			</tr>
+			<tr>
+				<th>Total</th>
+				<td>100</td>
+				<td>100%</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 
 In the above table, the frequency and percentage distribution of respondent’s educational qualifications is outlined. From one hundred respondents, twenty percent 20% had Ph.D, fourteen percent 14% had MA/M.Sc, twelve percent 12% were holders of B.Sc./B. A, fifty persons’ percent were undergraduates. Those with other qualifications not specified in the questionnaire were ten, accounting for 10 percent.
 
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue8/article07/akande-table3.png').default}
-			alt='Table 3: Research Question one: Are Opera important instruments in the preservation of a people’s culture?'
-		/>
-		<figcaption>
-			**_Table 3._** Research Question one: Are Opera important instruments in
-			the preservation of a people’s culture?
-		</figcaption>
-	</figure>
+<div className='figureBox wide'>
+
+<table>
+	<caption>
+		{' '}
+		**Table 3.** Research Question one: Are Opera important instruments in the preservation
+		of a people’s culture?
+	</caption>
+	<thead>
+		<tr>
+			<th>S/N</th>
+			<th>ITEMS</th>
+			<th>SA</th>
+			<th>A</th>
+			<th>UD</th>
+			<th>SD</th>
+			<th>D</th>
+			<th>X</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>
+				<strong>1</strong>
+			</td>
+			<td>
+				Opera usually depicts the values, attitudes and behaviors of a
+				particular set(s) of people
+			</td>
+			<td>
+				<strong>60</strong>
+			</td>
+			<td>
+				<strong>10</strong>
+			</td>
+			<td>
+				<strong>5</strong>
+			</td>
+			<td>
+				<strong>7</strong>
+			</td>
+			<td>
+				<strong>25</strong>
+			</td>
+			<td>
+				<strong>3.94</strong>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<strong>2</strong>
+			</td>
+			<td>
+				The western culture is a strong force to reckon with in the world mainly
+				due to the force of the film medium
+			</td>
+			<td>
+				<strong>45</strong>
+			</td>
+			<td>
+				<strong>5</strong>
+			</td>
+			<td>
+				<strong>20</strong>
+			</td>
+			<td>
+				<strong>10</strong>
+			</td>
+			<td>
+				<strong>16</strong>
+			</td>
+			<td>
+				<strong>3.16</strong>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<strong>3</strong>
+			</td>
+			<td>
+				When properly planned and researched films could be a powerful
+				instrument for the promotion and preservation of people’s culture.
+			</td>
+			<td>
+				<strong>80</strong>
+			</td>
+			<td>
+				<strong>10</strong>
+			</td>
+			<td>
+				<strong>8</strong>
+			</td>
+			<td>
+				<strong>2</strong>
+			</td>
+			<td>
+				<strong>0</strong>
+			</td>
+			<td>
+				<strong>4.68</strong>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<strong>4</strong>
+			</td>
+			<td>
+				The perception of the Yoruba costumes, language, songs as spectacular is
+				mainly due to their projection in the Opera
+			</td>
+			<td>
+				<strong>10</strong>
+			</td>
+			<td>
+				<strong>40</strong>
+			</td>
+			<td>
+				<strong>35</strong>
+			</td>
+			<td>
+				<strong>13</strong>
+			</td>
+			<td>
+				<strong>2</strong>
+			</td>
+			<td>
+				<strong>3.43</strong>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<strong>5</strong>
+			</td>
+			<td>
+				Yoruba Operas are strong public relations strategies which can
+				communicate and create an understanding of people’s culture to the world
+			</td>
+			<td>
+				<strong>85</strong>
+			</td>
+			<td>
+				<strong>10</strong>
+			</td>
+			<td>
+				<strong>5</strong>
+			</td>
+			<td>
+				<strong>0</strong>
+			</td>
+			<td>
+				<strong>0</strong>
+			</td>
+			<td>
+				<strong>4.8</strong>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 </div>
 
 ​The table above shows the mean score on the information obtained on the power of the film medium. Five terms sort the respondent’s assessment, in which all variables were accepted. The weighty decision in item one, two, three, four and five, which translates into three point ninety-four, four point sixty-eight, three point sixty-one, three point forty-three and four point eight respectively, approves the claim that Yoruba opera is an effective tool in preserving culture.
 
 <div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue8/article07/akande-table4.png').default}
-			alt='Table 4: Research Question two: Can the Nigeria Folk Opera portray a rich heritage of the Yoruba Culture?'
-		/>
-		<figcaption>
-			**_Table 4._** Research Question two: Can the Nigeria Folk Opera portray a
-			rich heritage of the Yoruba Culture?
-		</figcaption>
-	</figure>
+	
+	<table>
+  <caption>
+    {" "}
+    **Table 4.** Research Question two: Can the Nigeria Folk Opera portray a
+    rich heritage of the Yoruba Culture?{" "}
+  </caption>
+  <thead>
+    <tr>
+      <th>S/N</th>
+      <th>ITEMS</th>
+      <th>SA</th>
+      <th>A</th>
+      <th>UD</th>
+      <th>SD</th>
+      <th>D</th>
+      <th>X</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <strong>1.</strong>
+      </td>
+      <td>
+        The representation of the Yoruba culture and the promotion of
+        westernization is highly promoted in our home videos
+      </td>
+      <td>
+        <strong>10</strong>
+      </td>
+      <td>
+        <strong>15</strong>
+      </td>
+      <td>
+        <strong>20</strong>
+      </td>
+      <td>
+        <strong>25</strong>
+      </td>
+      <td>
+        <strong>30</strong>
+      </td>
+      <td>
+        <strong>2.5</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>2.</strong>
+      </td>
+      <td>
+        Yoruba Opera themes and plots are usually connected to the Yoruba people
+        and their lifestyle
+      </td>
+      <td>
+        <strong>57</strong>
+      </td>
+      <td>
+        <strong>26</strong>
+      </td>
+      <td>
+        <strong>7</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>10</strong>
+      </td>
+      <td>
+        <strong>4.2</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>3.</strong>
+      </td>
+      <td>
+        Yoruba Opera have so far, painted a gory image of Yorubas and disregard
+        their beautiful and rich heritage
+      </td>
+      <td>
+        <strong>42</strong>
+      </td>
+      <td>
+        <strong>28</strong>
+      </td>
+      <td>
+        <strong>10</strong>
+      </td>
+      <td>
+        <strong>13</strong>
+      </td>
+      <td>
+        <strong>17</strong>
+      </td>
+      <td>
+        <strong>3.75</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>4.</strong>
+      </td>
+      <td>
+        Yorubas have not root and identity in the world which can be blamed on
+        the poor depiction in Nigeria film industry.
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>82</strong>
+      </td>
+      <td>
+        <strong>18</strong>
+      </td>
+      <td>
+        <strong>1.82</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>5.</strong>
+      </td>
+      <td>Opera promotes the various Yoruba costumes.</td>
+      <td>
+        <strong>31</strong>
+      </td>
+      <td>
+        <strong>25</strong>
+      </td>
+      <td>
+        <strong>15</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>29</strong>
+      </td>
+      <td>
+        <strong>3.27</strong>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
 </div>
 
 ​The table above shows the mean score on the information obtained on the effectiveness of Yoruba Opera in promoting the rich heritage of the Yoruba culture. Five items sort the respondent’s assessment, in which three variables were translated into four point two, three point seventy-five, and three point twenty-nine affirms that Opera has succeeded in promoting the rich heritage of Yoruba culture. However, item one and four indicates that the Nigerian Film Industry has not done enough to preserve the Yoruba culture.
 
 <div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue8/article07/akande-table5.png').default}
-			alt='Table 5: Research question three: if managed properly, can Yoruba Opera proliferate the culture of the Yoruba people?'
-		/>
-		<figcaption>
-			**_Table 5._** Research question three: if managed properly, can Yoruba
-			Opera proliferate the culture of the Yoruba people?
-		</figcaption>
-	</figure>
+	
+	<table>
+  <caption>
+    {" "}
+    **Table 5.** Research question three: if managed properly, can Yoruba Opera
+    proliferate the culture of the Yoruba people?{" "}
+  </caption>
+  <thead>
+    <tr>
+      <th>S/N</th>
+      <th>ITEMS</th>
+      <th>SA</th>
+      <th>A</th>
+      <th>UD</th>
+      <th>SD</th>
+      <th>D</th>
+      <th>X</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <strong>1</strong>
+      </td>
+      <td>
+        Yoruba people are rich in cultural values which is meant to be displayed
+        both home and in diaspora
+      </td>
+      <td>
+        <strong>70</strong>
+      </td>
+      <td>
+        <strong>30</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>4.7</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>2</strong>
+      </td>
+      <td>
+        Our culture and values are constantly being eroded Thus, a means must be
+        created to preserve it
+      </td>
+      <td>
+        <strong>97</strong>
+      </td>
+      <td>
+        <strong>3</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>4.9</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>3</strong>
+      </td>
+      <td>Yoruba Opera is highly reckoned with in the world</td>
+      <td>
+        <strong>45</strong>
+      </td>
+      <td>
+        <strong>19</strong>
+      </td>
+      <td>
+        <strong>10</strong>
+      </td>
+      <td>
+        <strong>23</strong>
+      </td>
+      <td>
+        <strong>3</strong>
+      </td>
+      <td>
+        <strong>3.8</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>4</strong>
+      </td>
+      <td>
+        Yoruba Opera could become a leading force in the promotion of our
+        disrupted culture
+      </td>
+      <td>
+        <strong>11</strong>
+      </td>
+      <td>
+        <strong>59</strong>
+      </td>
+      <td>
+        <strong>30</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>3.81</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <strong>5</strong>
+      </td>
+      <td>Yoruba actors and writers can promote the culture through Operas</td>
+      <td>
+        <strong>82</strong>
+      </td>
+      <td>
+        <strong>3</strong>
+      </td>
+      <td>
+        <strong>7</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>0</strong>
+      </td>
+      <td>
+        <strong>4.42</strong>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
 </div>
 
 The table above shows the mean score on the information obtained on the power of Yoruba Opera in propagating the culture of the Yoruba people. Five items sort the respondent’s assessment, in which all variables were accepted. The decision in all items one, two, three, four and five, which translates into four point seven, four point ninety-seven, three point eight, three point eighty-one and four point forty-two respectively, indicates that if Yoruba Opera performance is pronounced, it will effectively broadcast and sustain the heritage of the Yoruba people at home and in the diaspora.
