--- a/issue8/article08/2023-02-18-art.mdx
+++ b/issue8/article08/2023-02-18-art.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Amaqghira as a dancer, singer and drummer'
+title: '#8 Amaqghira as a dancer, singer and drummer'
 slug: amaqghira-as-a-dancer-singer-and-drummer
 description: 'The thesis of this work is that by concentrating on the amagqirha ritual space, which entails singing, dancing, drumming, and divination, we may unveil the artistic nature or prowess of amagqirha practices while recreating the significance of traditional healers in modern societies.'
 authors: [bizu, avilliers]
@@ -16,7 +16,7 @@ tags:
   ]
 ---
 
-# Amaqghira as a dancer, singer and drummer
+# #8 Amaqghira as a dancer, singer and drummer
 
 {/* truncate */}
 
@@ -32,14 +32,14 @@ Accepted: Nov 02, 2022
 
 ```
 
-# Amaqghira as a dancer, singer and drummer
+# #8 Amaqghira as a dancer, singer and drummer
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -303,12 +303,12 @@ The drumming skills are bequeathed through oral traditions and observation, whic
 	</figure>
 </div>
 
-<div className='audio'>
-	<audio
-		controls
-		src={require('@site/issue8/article08/audio2.mp3').default}
-	></audio>
-</div>
+	<div className='audio'>
+		<audio
+			controls
+			src={require('@site/issue8/article08/audio2.mp3').default}
+		></audio>
+	</div>
 
 During one of the observed amagqhira ceremonies, the tempo of the drum was
 intensified, prompting the amagqirha to increase their dance tempo while the
@@ -353,36 +353,36 @@ To completely comprehend how being a singer, dancer, and drummer influences an _
 <div className='references'>
 
 1. Becker, Judith O. 2004. _Deep listeners: Music, emotion, and trancing._ Indiana University Press.
-2. Dowling, Tessa, and Kathryn Stinson. 2011. "Pop singer as healer: the use of Xhosa lyrics as cultural self-realization." _Journal of African Cultural Studies 23, no. 2 (2011): 177-188._
+2. Dowling, Tessa, and Kathryn Stinson. 2011. "Pop singer as healer: the use of Xhosa lyrics as cultural self-realization." _Journal of African Cultural Studies 23, no. 2(2011): 177-188._
 3. Faxi-Lewis, Nunziatina Nomalibo. 2003. "Iintlombe Zamagqirha: an assessment of the meaning and value of Xhosa-speaking diviners' songs." PhD diss., University of Cape Town, 2003.​
 4. Gamedze, Asher. 2019. "It’s in the out sides: An investigation into the cosmological contexts of South African jazz." Master's thesis, Faculty of Humanities, 2019.
-5. Gasa, Ntombi. 2004. “Dancing with the ancestors”. _Agenda. Vol. 18 (61): 14-15._ DOI: 10.1080/10130950.2004.9676033.
+5. Gasa, Ntombi. 2004. “Dancing with the ancestors”. _Agenda. Vol. 18(61): 14-15._ DOI: 10.1080/10130950.2004.9676033.
 6. Hailey, John. 2008. _Ubuntu: a literature review._ Document. London: Tutu Foundation.
 7. Hansen, Deirdre Doris. 1981.” The music of the Xhosa-speaking people.“ PhD dissertation, University of Witwatersrand, Johannesburg, 1981.
 8. Hewson, Mariana G. 1998. "Traditional healers in southern Africa." _Annals of Internal Medicine 128, no. 12, Part 1 (1998): 1029-1034._
-9. Horsthemke, Kai. 2018. "African communalism, persons, and the case of non-human animals." _Filosofia Theoretica: Journal of African Philosophy, Culture and Religions 7, no. 2 (2018): 60-79._
+9. Horsthemke, Kai. 2018. "African communalism, persons, and the case of non-human animals." _Filosofia Theoretica: Journal of African Philosophy, Culture and Religions 7, no. 2(2018): 60-79._
 10. Izu, Benjamin, and Alethea de Villiers. 2021. "A Review of the Sociocultural Roles of Traditional Musical Arts in Xhosa Society." _ADRRI Journal of Arts and Social Sciences 18. No. 2. Issue 6 (July-September): 148-165._
 11. James, Lavana. 2008. “Experience a Different Culture”.
-12. Janzen, John M. 1995. “Self-presentation and common cultural structures in Ngoma rituals of Southern Africa.” _Journal of religion in Africa. 25 (2): 141-162._
+12. Janzen, John M. 1995. “Self-presentation and common cultural structures in Ngoma rituals of Southern Africa.” _Journal of religion in Africa. 25(2): 141-162._
 13. Juslin, Patrik N. 2013. “What does music express? Basic emotions and beyond.” _Frontiers in psychology vol. 4 596. 6 Sep. 2013._ ​
-14. Kirsch, Irving. and Sreven J. Lynn. 1995. “Altered state of hypnosis: Changes in the theoretical landscape.” _American Psychology 50 (10): 846._
+14. Kirsch, Irving. and Sreven J. Lynn. 1995. “Altered state of hypnosis: Changes in the theoretical landscape.” _American Psychology 50(10): 846._
 15. Kokoma, Zikhona. 2021. "Amagqirha nemicimbi: The art of healing.". MA thesis, University of Western Cape, 2021.
 16. Levine, Laurie. 2005. _The Drumcafe's traditional music of South Africa._ Jacana Media.
 17. Matory, Lorand J. 2018. _The Fetish Revisited: Marx, Freud, and the Gods Black People Make._ Duke University Press Books (November 23, 2018)
 18. Mlisa, Lily-Rose Nomfundo. 2009. "Ukuthwasa initiation of Amagqirha: Identity construction and the training of Xhosa women as traditional healers." PhD diss., University of the Free State, 2009.
-19. \__ 2013. “Types of Umbilini (Intuition) in the “ukunyanga” (Xhosa Divination) Tradition.” \_Journal of Psychology in Africa. Vol. 23 (4): 609-614._
+19. ____. 2013. “Types of Umbilini (Intuition) in the “ukunyanga” (Xhosa Divination) Tradition.” _Journal of Psychology in Africa. Vol. 23(4): 609-614._
 20. Mndende, Nokuzola. 2002. "Signifying practices: AmaXhosa ritual speech." PhD thesis, University of Cape Town, 2002.
-21. Monteiro, Nicole M., and Diana J. Wall. 2011. "African dance as healing modality throughout the diaspora: The use of ritual and movement to work through trauma." _The Journal of Pan African Studies 4 (6): 234-252._
+21. Monteiro, Nicole M., and Diana J. Wall. 2011. "African dance as healing modality throughout the diaspora: The use of ritual and movement to work through trauma." _The Journal of Pan African Studies 4(6): 234-252._
 22. Moyo, Sinikiwe. 2016. "Isitshikitsha and izangoma dances. A comparative study." (Honours dissertation, Midland State University, Zimbabwe, 2016.
 23. Mtuze, Peter Tshobiso. 2004. _Introduction to Xhosa culture._ Alice, South Africa: Lovedale Press.
 24. Rani, Maxwell Xolani. 2013. "Lost meaning - new traditions: an investigation into the effects of modernity on African social traditional dance in Nyanga, Cape Town." Master's thesis, University of Cape Town.
 25. Ruud, Even. 2013. "Can music serve as a “cultural immunogen”? An explorative study." _International journal of qualitative studies on health and well-being 8 (1): 20597._
-26. Sandlana, Nonkululeko Sheilla. 2014. "Umoya: Understanding the experiential value of traditional African dance and music for traditional healers." _Mediterranean Journal of Social Sciences 5 (3): 541-541._
-27. Simelane, Thokozani S., and Graham I. H. Kerley. 1998. "Conservation implications of the use of vertebrates by Xhosa traditional healers in South Africa." _South African Journal of Wildlife Research-24-month delayed open access 28 (4): 121-126._
+26. Sandlana, Nonkululeko Sheilla. 2014. "Umoya: Understanding the experiential value of traditional African dance and music for traditional healers." _Mediterranean Journal of Social Sciences 5(3): 541-541._
+27. Simelane, Thokozani S., and Graham I. H. Kerley. 1998. "Conservation implications of the use of vertebrates by Xhosa traditional healers in South Africa." _South African Journal of Wildlife Research-24-month delayed open access 28(4): 121-126._
 28. Sithole, N. 2016. “Male Circumcision, Marriage and the Notion of (In) Completeness.” In I*saiah Shembe’s Hymns and the Sacred Dance in Ibandla lamaNazaretha. 124-152. Brill.*
 29. Stinson, Kathryn Lee. 1998. "Divination processes: An examination of the incorporated belief systems of several Nguni diviners and the subsequent effects on the symbolism, form, structure and style of the music associated with their ritual practices." PhD diss., University of Cape Town, 1998.
-30. Thornton, Robert. 2009. “The Transmission of Knowledge in South African Traditional Healing.” _Africa 79 (1): 17–34._
-31. _\_\_2017. \_Healing the exposed being: The Ngoma healing tradition in South Africa._ NYU Press, 2017.
+30. Thornton, Robert. 2009. “The Transmission of Knowledge in South African Traditional Healing.” _Africa 79(1): 17–34._
+31. ____. 2017. \_Healing the exposed being: The Ngoma healing tradition in South Africa._ NYU Press, 2017.
 
 </div>
     
