--- a/issue8/article09/2023-02-17.mdx
+++ b/issue8/article09/2023-02-17.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Interpretation of Violin Performance Style in 'The Butterfly Lovers' Violin Concerto"
+title: "#9 The Interpretation of Violin Performance Style in 'The Butterfly Lovers' Violin Concerto"
 slug: the-interpretation-of-butterfly-lovers-violin-concerto
 description: 'The Butterfly Lovers Violin Concerto is composed by two Chinese composers, Zhanhao He and Gang Chen in 1959. Innovations and characteristics of synthesizing the Chinese and western musical traditions and features make this violin concerto a standard work in mid-20th century China.'
 authors: [yguo]
@@ -15,7 +15,7 @@ tags:
   ]
 ---
 
-# The Interpretation of Violin Performance Style in 'The Butterfly Lovers' Violin Concerto
+# #9 The Interpretation of Violin Performance Style in 'The Butterfly Lovers' Violin Concerto
 
 {/* truncate */}
 
@@ -30,14 +30,14 @@ Accepted: Oct 28, 2022
 
 ```
 
-# The Interpretation of Violin Performance Style in 'The Butterfly Lovers' Violin Concerto
+# #9 The Interpretation of Violin Performance Style in 'The Butterfly Lovers' Violin Concerto
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
