--- a/issue7/article07/2022-02-19.mdx
+++ b/issue7/article07/2022-02-19.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Comparing Toru Takemitsu’s Musical Language to Messiaen and Debussy'
+title: '#7 Comparing Toru Takemitsu’s Musical Language to Messiaen and Debussy'
 slug: comparing-toru-takemitsu-musical-language-to-messiaen-and-debussy
 description: 'This paper examines how Toru Takemitsu musical language in his piano music shows influence from Messiaen and Debussy. Takemitsu has acknowledged that Messiaen and Debussy have both influenced his music, but the full extent of his influence has not been examined in detail.'
 authors: [haijin]
 tags: [analyses, Takemitsu, Debussy, Messiaen, style]
 ---
 
-# Comparing Toru Takemitsu’s Musical Language to Messiaen and Debussy
+# #7 Comparing Toru Takemitsu’s Musical Language to Messiaen and Debussy
 
 {/* truncate */}
 
@@ -20,14 +20,14 @@ Reviewed: Jan 05, 2022
 Accepted: Jan 15, 2022
 ```
 
-# Comparing Toru Takemitsu’s Musical Language to Messiaen and Debussy
+# #7 Comparing Toru Takemitsu’s Musical Language to Messiaen and Debussy
 
 export function Name({ author, affil, email }) {
 	return (
-		<p className='flex flex-col text-center'>
+		<p className='author'>
 			<strong>{author}</strong>
 			<span>{affil}</span>
-			{email}
+			<span>{email}</span>
 		</p>
 	);
 }
@@ -97,7 +97,7 @@ Takemitsu first encountered Messiaen’s music in the latter’s Preludes for Pi
 
 Takemitsu has also acknowledged an appreciation for Debussy’s orchestration style. In his essay, “Dream and Number,” he wrote:
 
-> Unlike the orchestration of German composers, that of Debussy has many musical focuses. Debussy’s music is unique in that, rather than emphasizing one principal theme, it displays multiple aspects of timbre. This may have something to do with French music, which shows special attention to color” (Takemitsu 1995, 97).
+> Unlike the orchestration of German composers, that of Debussy has many musical focuses. Debussy’s music is unique in that, rather than emphasizing one principal theme, it displays multiple aspects of timbre. This may have something to do with French music, which shows special attention to color.” (Takemitsu 1995, 97)
 
 He also said that he learned not only from its sonority, but also the concept of form and color, especially in Debussy’s Preludes, Book 2, which fit his sense completely (Ibid.)
 
@@ -105,28 +105,28 @@ From Takemitsu’s documented admiration of these composers, we can explore what
 
 ## Background
 
-In 1950, Takemitsu worked on his first composition, Lento in Due Movimenti for piano solo. It took more than six months to finish this composition and he made revision after revision (Tachibana 1992, 225-226). Takemitsu tried to create a new pentatonic system derived from a Japanese pentatonic scale in this piece. While he was struggling with this composition, Takemitsu had another sensational encounter. His composer friend, Toshi Ichiyanagi, invited Takemitsu over to his house where there was a score of Preludes for Piano, written in 1929, by Oliver Messiaen. After studying the score, Takemitsu realized that this music was perfectly suited his concept of “ideal sound” (Ibid.). He admired
+In 1950, Takemitsu worked on his first composition, Lento in Due Movimenti for piano solo. It took more than six months to finish this composition and he made revision after revision (Tachibana 1992, 225-226). Takemitsu tried to create a new pentatonic system derived from a Japanese pentatonic scale in this piece. While he was struggling with this composition, Takemitsu had another sensational encounter. His composer friend, Toshi Ichiyanagi, invited Takemitsu over to his house where there was a score of Preludes for Piano, written in 1929, by Oliver Messiaen. After studying the score, Takemitsu realized that this music was perfectly suited his concept of “ideal sound” (Ibid.). He admired:
 
-> the sensual sound and the abundance of colorful resonance. I thought this sound was what I was looking for. It matched my sense completely. When I was writing the first piano piece, it was going nowhere, but after I heard Messiaen, I found my way out from the tunnel (Ibid.).
+> the sensual sound and the abundance of colorful resonance. I thought this sound was what I was looking for. It matched my sense completely. When I was writing the first piano piece, it was going nowhere, but after I heard Messiaen, I found my way out from the tunnel. (Ibid.)
 
 When Takemitsu first encountered Messiaen’s Preludes, he had been thinking a lot about sonority and timbre, and he was very impressed with the abundant tone color and distinctive harmonic vocabulary of Messiaen’s music. Takemitsu analyzed the characteristics of Messiaen’s music in an interview:
 
-> Messiaen uses tonality but he emphasizes the third of the chord, rather than the root. […] Western tradition’s foundation is based on the root of the chord. […] Tonality needs a stabilized structure. However, in Messiaen’s case, he uses tonality but he doesn’t value the root, so the structure becomes unstable. It is unstable, but the sound color becomes rich because the timbre is affected by the third of the chord. The sonority and the abundance of timbre are determined not by the root but by the spectrum of the overtone which is put on top of the root. Timpani is often used in German music in order to solidify the root. But Messiaen doesn’t use timpani. And I don’t use it either (Ibid., 225).
+> Messiaen uses tonality but he emphasizes the third of the chord, rather than the root. (...) Western tradition’s foundation is based on the root of the chord. (...) Tonality needs a stabilized structure. However, in Messiaen’s case, he uses tonality but he doesn’t value the root, so the structure becomes unstable. It is unstable, but the sound color becomes rich because the timbre is affected by the third of the chord. The sonority and the abundance of timbre are determined not by the root but by the spectrum of the overtone which is put on top of the root. Timpani is often used in German music in order to solidify the root. But Messiaen doesn’t use timpani. And I don’t use it either. (Ibid., 225)
 
 Takemitsu was partly identifying his music with Messiaen’s non-Germanic musical characteristics.
 
 Another important factor that Takemitsu identifies in Debussy’s and Messiaen’s music is a notion of time that is closer to the Japanese than to the German tradition. In Debussy’s music, Takemitsu felt that the sense of time came from another dimension, which was very different from the Western tradition. In Lento in due Movimenti, he wanted to destroy the conventional concept of time.
 
-In an interview with Roger Reynolds, Takemitsu describes his concept of time in his music. He says
+In an interview with Roger Reynolds, Takemitsu describes his concept of time in his music. He says:
 
-> What I do is to translate an extremely specific plan of a garden into music. The point is that there are many different ‘times’ in garden [...] the movement of vegetation, the ‘time’ of vegetation growing, the fast changes of elements like grass [...] there are rocks [...] and sand [...]. I’m interested in this sort of traversing of multiple ‘times’, and as much as possible I want to understand the orchestra in this way (Roger and Takemitsu 1996, 65).
+> What I do is to translate an extremely specific plan of a garden into music. The point is that there are many different ‘times’ in garden (...) the movement of vegetation, the ‘time’ of vegetation growing, the fast changes of elements like grass (...) there are rocks (...) and sand (...). I’m interested in this sort of traversing of multiple ‘times’, and as much as possible I want to understand the orchestra in this way. (Roger and Takemitsu 1996, 65)
 
 When listening to the Rain Tree Sketch, there is a static quality when thinking about how time moves in the piece. Although many things happen, we are left feeling that not much
 has changed. It is like capturing a moment of observing different layers of time, without disrupting them as they fade in and out.
 
 Conventionally, a multi-movement work includes a fast movement and a slow movement in order to make a contrast. But Takemitsu wanted to put two slow movements side by side and create a different type of contrast. He thought of making a richer expression by using soft sound and slow tempo rather than with big sound and fast tempo:
 
-> There is a limit to a big sound, but there is no limit to a soft sound. There is a limit to a fast tempo, but there is no limit to a slow tempo (Ibid., 59).
+> There is a limit to a big sound, but there is no limit to a soft sound. There is a limit to a fast tempo, but there is no limit to a slow tempo. (Ibid., 59)
 
 In Debussy’s music, Takemitsu sensed many non-Western aspects which were closer to a Japanese sensibility. When Takemitsu was trying to invent his own language, it is possible that he was studying pentatonicism in Debussy’s and Messiaen’s music as well. According to Seiko Ito (2000) Takemitsu was awakened by the non-European, Japanese elements in the music of Debussy and Messiaen rather than by the French music itself. These non-Western elements, such as silence and nature, were not truly Japanese, but rather, a hybrid of the two contrasting cultures (Ibid., 43).
 
@@ -152,9 +152,9 @@ The author will compare Debussy’s Prelude No. 8, Ondine, to Takemitsu’s Rain
 
 ### Preliminary Findings
 
-The octatonic scale is a very important element of Takemitsu’s musical language. In the Rain Tree Sketches, there are numerous octatonic pitch collections. In Rain Tree Sketch I, there are several octatonic figures (_Example 1_, below).
+<div className='floatBox'>
 
-<div className='figureBox'>
+<div className='figureBox left'>
 	<figure>
 		<img
 			src={require('@site/issue7/article07/hai-ex1.png').default}
@@ -167,7 +167,13 @@ The octatonic scale is a very important element of Takemitsu’s musical languag
 	</figure>
 </div>
 
+The octatonic scale is a very important element of Takemitsu’s musical language. In the Rain Tree Sketches, there are numerous octatonic pitch collections. In Rain Tree Sketch I, there are several octatonic figures (_Example 1_).
+
 Mostly octatonic figures can be found in Rain Tree Sketch II (_Example 2_). In Messiaen’s Première Communion de la Vièrge (_Example 3_), frequent use of octatonic scales and even chromatic scales leads to sonorities similar with Takemitsu’s Rain Tree Sketches.
+
+</div>
+
+<div className='figureGrid'>
 
 <div className='figureBox'>
 	<figure>
@@ -195,10 +201,11 @@ Mostly octatonic figures can be found in Rain Tree Sketch II (_Example 2_). In M
 		</figcaption>
 	</figure>
 </div>
+</div>
 
-Likewise, Debussy also uses the octatonic collection in his music, suggesting that Takemitsu also took this musical characteristic from Debussy’s music in addition to Messiaen. It is obvious that Debussy’s Prelude not only used octatonic scales, but also used whole tone scales and the Lydian scale (_Example 4_). Thus, Examples 1–4 are examples of octatonic collections in each of the four pieces.
+<div className='floatBox'>
 
-<div className='figureBox'>
+<div className='figureBox right'>
 	<figure>
 		<img
 			src={require('@site/issue7/article07/hai-ex4.png').default}
@@ -209,6 +216,10 @@ Likewise, Debussy also uses the octatonic collection in his music, suggesting th
 			collection.{' '}
 		</figcaption>
 	</figure>
+</div>
+
+Likewise, Debussy also uses the octatonic collection in his music, suggesting that Takemitsu also took this musical characteristic from Debussy’s music in addition to Messiaen. It is obvious that Debussy’s Prelude not only used octatonic scales, but also used whole tone scales and the Lydian scale (_Example 4_). Thus, Examples 1–4 are examples of octatonic collections in each of the four pieces.
+
 </div>
 
 As Messiaen used ostinato with three chords played by the left hand, three chords appear in the left hand throughout the whole of “Première Communion de la Vièrge.” It continues to repeat ostinato chords to create steady and heavy effect (_Example 5_). Takemitsu imitates Messiaen’s ostinato and two contrasting gestures. The opening of Rain Tree Sketch II features two rhythmic complexities: the combination of the groupings of sixteenth notes between the two hands, lower voice in the left hand, which are two groupings of sixteenth notes to create ostinato lines (_Example 6_). Thus, Examples 5 and 6 both have ostinato in the left hand. A similar thing happens in both composer’s music.
@@ -239,7 +250,10 @@ As Messiaen used ostinato with three chords played by the left hand, three chord
 	</figure>
 </div>
 
+
 The third category is textures with two contrasting figures (see _Example 7_). In Messiaen’s piece, the left- hand plays three different chords, forming a heavy and strict line. Contrastingly, the right hand has a free moving gesture in sixty-fourth notes.
+
+<div className='figureGrid'>
 
 <div className='figureBox'>
 	<figure>
@@ -263,10 +277,11 @@ The third category is textures with two contrasting figures (see _Example 7_). I
 		<figcaption>**_Example 8._** Takemitsu’s Rain Tree Sketch II</figcaption>
 	</figure>
 </div>
+</div>
 
 There are also two contrasting voices in Takemitsu’s _Rain Tree Sketch II_ (_Example 8_). The left hand has two groupings of sixteenth notes, but the right hand plays a free and moving gesture, which is a totally different and contrasting gesture. The right hand has three groupings of sixteenth notes to create two contrasting layers
 
-_________________
+---
 
 ## Conclusion
 
@@ -276,13 +291,13 @@ There are many aspects that prove that Takemitsu was influenced by Messiaen and 
 
 Takemitsu’s “Japanese” sound is created by combining various musical elements from Western sources (Messiaen and Debussy) with Japanese aesthetics within an abstract music language. He reveals the “irrational” nature of free compositional decisions that characterize the music of Takemitsu. It is an “imaginative mixture of “Western” analytical tools and “Eastern” aesthetic speculations (Hosokawa 2003, 505-509).
 
-_________________
+---
 
-## References 
+## References
 
 <div className='references'>
 
-1. Burt, Peter.  2001. _The Music of Toru Takemitsu_. New York: Cambridge University Press.
+1. Burt, Peter. 2001. _The Music of Toru Takemitsu_. New York: Cambridge University Press.
 2. Debussy, Claude. 2007. _Favorite Piano Works_. New York: G. Schirmer,
 3. Fukuchi, Hidetoshi. 1998. "The Pitch Content of Selected Piano Works of Toru Takemitsu." DMA diss., University of North Texas, 1998.
 4. Halls, Glen Charles. 1995. “Compositional Applications of Sonority: Analysis and Discussion of Select Twentieth Century Works.” DMA diss., University of Victoria,1995.
@@ -300,9 +315,7 @@ _________________
 16. Takemitsu,Toru. 1995. _Confronting Silence_. Translated by Y. Kakudo and G. Glasow. Berkeley: Fallen Leaf Press.
 17. Takemitsu,Toru. 2005. _Rain Tree Sketch_. Germany: Schott Music, 2005.
 18. Taniguchi, Akiko. 2008. “Performance Issues of Toru Takemitsu’s Solo Piano Works: ‘Litany’ and ‘RainTree Sketch’ “. Master’s Thesis, California Stae University, Long Beach, 2008.
-19. Wilkins, Black. 1999.  “An Analysis of Musical Temporality in Toru Takemitsu’s Rain Tree.” DMA diss., University of Oklahoma, 1999.
-
-
+19. Wilkins, Black. 1999. “An Analysis of Musical Temporality in Toru Takemitsu’s Rain Tree.” DMA diss., University of Oklahoma, 1999.
 
 </div>
 
